// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`voices selector selectAvailableVoicesByLanguageName should return the available voices by language name 1`] = `
Object {
  "Dutch": Object {
    "code": "nl",
    "createdAt": "2019-05-16T12:52:08.217Z",
    "id": "cd72f71c-dc59-4be7-8a40-0143fe6f0ad9",
    "isActive": true,
    "name": "Dutch",
    "nativeName": "Nederlands",
    "updatedAt": "2019-05-16T12:52:08.217Z",
    "voices": Array [
      Object {
        "audioProfile": "default",
        "countryCode": "NL",
        "createdAt": "2019-04-25T07:27:13.542Z",
        "exampleAudioUrl": "https://storage-development.playpost.app/voices/9fbd2cd5-b0e6-4c0b-b87d-f89b75f2b9ac.wav",
        "gender": "FEMALE",
        "id": "9fbd2cd5-b0e6-4c0b-b87d-f89b75f2b9ac",
        "isActive": true,
        "isHighestQuality": true,
        "isLanguageDefault": null,
        "isPremium": true,
        "label": "Denise",
        "language": Object {
          "code": "nl",
          "createdAt": "2019-05-16T12:52:08.217Z",
          "id": "cd72f71c-dc59-4be7-8a40-0143fe6f0ad9",
          "isActive": true,
          "name": "Dutch",
          "nativeName": "Nederlands",
          "updatedAt": "2019-05-16T12:52:08.217Z",
        },
        "languageCode": "nl-NL",
        "name": "nl-NL-Wavenet-A",
        "naturalSampleRateHertz": 24000,
        "pitch": 0,
        "speakingRate": 1,
        "synthesizer": "Google",
        "updatedAt": "2019-06-20T12:38:50.625Z",
      },
      Object {
        "audioProfile": "default",
        "countryCode": "NL",
        "createdAt": "2019-04-25T07:27:13.518Z",
        "exampleAudioUrl": "https://storage-development.playpost.app/voices/6672a747-3a12-42b3-98fd-878221c236ad.wav",
        "gender": "FEMALE",
        "id": "6672a747-3a12-42b3-98fd-878221c236ad",
        "isActive": true,
        "isHighestQuality": true,
        "isLanguageDefault": null,
        "isPremium": true,
        "label": "Ineke",
        "language": Object {
          "code": "nl",
          "createdAt": "2019-05-16T12:52:08.217Z",
          "id": "cd72f71c-dc59-4be7-8a40-0143fe6f0ad9",
          "isActive": true,
          "name": "Dutch",
          "nativeName": "Nederlands",
          "updatedAt": "2019-05-16T12:52:08.217Z",
        },
        "languageCode": "nl-NL",
        "name": "nl-NL-Wavenet-D",
        "naturalSampleRateHertz": 24000,
        "pitch": 0,
        "speakingRate": 1,
        "synthesizer": "Google",
        "updatedAt": "2019-06-20T12:38:50.532Z",
      },
      Object {
        "audioProfile": "default",
        "countryCode": "NL",
        "createdAt": "2019-04-25T07:27:13.506Z",
        "exampleAudioUrl": "https://storage-development.playpost.app/voices/31c97a6d-7f2b-4a7d-9e70-55e6ec680fc9.wav",
        "gender": "MALE",
        "id": "31c97a6d-7f2b-4a7d-9e70-55e6ec680fc9",
        "isActive": true,
        "isHighestQuality": true,
        "isLanguageDefault": null,
        "isPremium": true,
        "label": "Koen",
        "language": Object {
          "code": "nl",
          "createdAt": "2019-05-16T12:52:08.217Z",
          "id": "cd72f71c-dc59-4be7-8a40-0143fe6f0ad9",
          "isActive": true,
          "name": "Dutch",
          "nativeName": "Nederlands",
          "updatedAt": "2019-05-16T12:52:08.217Z",
        },
        "languageCode": "nl-NL",
        "name": "nl-NL-Wavenet-C",
        "naturalSampleRateHertz": 24000,
        "pitch": 0,
        "speakingRate": 1,
        "synthesizer": "Google",
        "updatedAt": "2019-06-20T12:38:50.773Z",
      },
      Object {
        "audioProfile": "default",
        "countryCode": "NL",
        "createdAt": "2019-04-25T11:35:03.308Z",
        "exampleAudioUrl": null,
        "gender": "FEMALE",
        "id": "66dafa12-042a-481f-bf6b-e6ac23689c90",
        "isActive": true,
        "isHighestQuality": false,
        "isLanguageDefault": null,
        "isPremium": true,
        "label": "Lotte",
        "language": Object {
          "code": "nl",
          "createdAt": "2019-05-16T12:52:08.217Z",
          "id": "cd72f71c-dc59-4be7-8a40-0143fe6f0ad9",
          "isActive": true,
          "name": "Dutch",
          "nativeName": "Nederlands",
          "updatedAt": "2019-05-16T12:52:08.217Z",
        },
        "languageCode": "nl-NL",
        "name": "Lotte",
        "naturalSampleRateHertz": null,
        "pitch": 0,
        "speakingRate": 1,
        "synthesizer": "AWS",
        "updatedAt": "2019-04-25T11:35:03.308Z",
      },
      Object {
        "audioProfile": "default",
        "countryCode": "NL",
        "createdAt": "2019-04-25T07:27:13.529Z",
        "exampleAudioUrl": null,
        "gender": "FEMALE",
        "id": "f7e1582b-db97-4067-a0a7-61d05f4dcc03",
        "isActive": true,
        "isHighestQuality": true,
        "isLanguageDefault": null,
        "isPremium": true,
        "label": "Marije",
        "language": Object {
          "code": "nl",
          "createdAt": "2019-05-16T12:52:08.217Z",
          "id": "cd72f71c-dc59-4be7-8a40-0143fe6f0ad9",
          "isActive": true,
          "name": "Dutch",
          "nativeName": "Nederlands",
          "updatedAt": "2019-05-16T12:52:08.217Z",
        },
        "languageCode": "nl-NL",
        "name": "nl-NL-Wavenet-E",
        "naturalSampleRateHertz": 24000,
        "pitch": 0,
        "speakingRate": 1,
        "synthesizer": "Google",
        "updatedAt": "2019-06-20T12:38:50.591Z",
      },
      Object {
        "audioProfile": "default",
        "countryCode": "NL",
        "createdAt": "2019-04-25T11:35:03.293Z",
        "exampleAudioUrl": "https://storage-development.playpost.app/voices/d4c0973c-5a36-4950-afe1-3e2224592c20.mp3",
        "gender": "MALE",
        "id": "d4c0973c-5a36-4950-afe1-3e2224592c20",
        "isActive": true,
        "isHighestQuality": false,
        "isLanguageDefault": true,
        "isPremium": false,
        "label": "Ruben",
        "language": Object {
          "code": "nl",
          "createdAt": "2019-05-16T12:52:08.217Z",
          "id": "cd72f71c-dc59-4be7-8a40-0143fe6f0ad9",
          "isActive": true,
          "name": "Dutch",
          "nativeName": "Nederlands",
          "updatedAt": "2019-05-16T12:52:08.217Z",
        },
        "languageCode": "nl-NL",
        "name": "Ruben",
        "naturalSampleRateHertz": null,
        "pitch": 0,
        "speakingRate": 1,
        "synthesizer": "AWS",
        "updatedAt": "2019-06-20T12:38:50.916Z",
      },
      Object {
        "audioProfile": "default",
        "countryCode": "NL",
        "createdAt": "2019-04-25T07:27:13.494Z",
        "exampleAudioUrl": "https://storage-development.playpost.app/voices/63dc3e3e-e04d-450b-ba08-7f97b484d78c.wav",
        "gender": "MALE",
        "id": "63dc3e3e-e04d-450b-ba08-7f97b484d78c",
        "isActive": true,
        "isHighestQuality": true,
        "isLanguageDefault": null,
        "isPremium": true,
        "label": "Stefan",
        "language": Object {
          "code": "nl",
          "createdAt": "2019-05-16T12:52:08.217Z",
          "id": "cd72f71c-dc59-4be7-8a40-0143fe6f0ad9",
          "isActive": true,
          "name": "Dutch",
          "nativeName": "Nederlands",
          "updatedAt": "2019-05-16T12:52:08.217Z",
        },
        "languageCode": "nl-NL",
        "name": "nl-NL-Wavenet-B",
        "naturalSampleRateHertz": 24000,
        "pitch": 0,
        "speakingRate": 1,
        "synthesizer": "Google",
        "updatedAt": "2019-06-20T12:38:50.252Z",
      },
    ],
  },
  "English": Object {
    "code": "en",
    "createdAt": "2019-05-16T12:51:57.546Z",
    "id": "95f01039-fe8e-412d-a542-7089303b84c8",
    "isActive": true,
    "name": "English",
    "nativeName": "English",
    "updatedAt": "2019-05-16T12:51:57.546Z",
    "voices": Array [
      Object {
        "audioProfile": "default",
        "countryCode": "GB",
        "createdAt": "2019-04-25T07:27:13.114Z",
        "exampleAudioUrl": null,
        "gender": "FEMALE",
        "id": "2534d51a-11c4-446f-a4da-a3f946305c44",
        "isActive": true,
        "isHighestQuality": true,
        "isLanguageDefault": null,
        "isPremium": true,
        "label": "Amelia",
        "language": Object {
          "code": "en",
          "createdAt": "2019-05-16T12:51:57.546Z",
          "id": "95f01039-fe8e-412d-a542-7089303b84c8",
          "isActive": true,
          "name": "English",
          "nativeName": "English",
          "updatedAt": "2019-05-16T12:51:57.546Z",
        },
        "languageCode": "en-GB",
        "name": "en-GB-Wavenet-C",
        "naturalSampleRateHertz": 24000,
        "pitch": 0,
        "speakingRate": 1,
        "synthesizer": "Google",
        "updatedAt": "2019-06-20T12:38:50.540Z",
      },
      Object {
        "audioProfile": "default",
        "countryCode": "GB",
        "createdAt": "2019-04-25T11:35:03.758Z",
        "exampleAudioUrl": null,
        "gender": "FEMALE",
        "id": "1a6136d5-fb0d-4543-a6f2-68feb020a31f",
        "isActive": true,
        "isHighestQuality": false,
        "isLanguageDefault": null,
        "isPremium": true,
        "label": "Amy",
        "language": Object {
          "code": "en",
          "createdAt": "2019-05-16T12:51:57.546Z",
          "id": "95f01039-fe8e-412d-a542-7089303b84c8",
          "isActive": true,
          "name": "English",
          "nativeName": "English",
          "updatedAt": "2019-05-16T12:51:57.546Z",
        },
        "languageCode": "en-GB",
        "name": "Amy",
        "naturalSampleRateHertz": null,
        "pitch": 0,
        "speakingRate": 1,
        "synthesizer": "AWS",
        "updatedAt": "2019-05-16T15:01:14.571Z",
      },
      Object {
        "audioProfile": "default",
        "countryCode": "GB",
        "createdAt": "2019-04-25T11:35:03.743Z",
        "exampleAudioUrl": null,
        "gender": "MALE",
        "id": "97170d75-94c1-4c46-972f-e8f1c1e17b1f",
        "isActive": true,
        "isHighestQuality": false,
        "isLanguageDefault": null,
        "isPremium": true,
        "label": "Brian",
        "language": Object {
          "code": "en",
          "createdAt": "2019-05-16T12:51:57.546Z",
          "id": "95f01039-fe8e-412d-a542-7089303b84c8",
          "isActive": true,
          "name": "English",
          "nativeName": "English",
          "updatedAt": "2019-05-16T12:51:57.546Z",
        },
        "languageCode": "en-GB",
        "name": "Brian",
        "naturalSampleRateHertz": null,
        "pitch": 0,
        "speakingRate": 1,
        "synthesizer": "AWS",
        "updatedAt": "2019-05-16T15:01:14.570Z",
      },
      Object {
        "audioProfile": "default",
        "countryCode": "US",
        "createdAt": "2019-04-25T07:27:13.250Z",
        "exampleAudioUrl": "https://storage-development.playpost.app/voices/3675e6db-307e-48de-b5ff-13b38470632f.wav",
        "gender": "FEMALE",
        "id": "3675e6db-307e-48de-b5ff-13b38470632f",
        "isActive": true,
        "isHighestQuality": true,
        "isLanguageDefault": null,
        "isPremium": true,
        "label": "Emily",
        "language": Object {
          "code": "en",
          "createdAt": "2019-05-16T12:51:57.546Z",
          "id": "95f01039-fe8e-412d-a542-7089303b84c8",
          "isActive": true,
          "name": "English",
          "nativeName": "English",
          "updatedAt": "2019-05-16T12:51:57.546Z",
        },
        "languageCode": "en-US",
        "name": "en-US-Wavenet-F",
        "naturalSampleRateHertz": 24000,
        "pitch": 0,
        "speakingRate": 1,
        "synthesizer": "Google",
        "updatedAt": "2019-06-20T12:38:50.234Z",
      },
      Object {
        "audioProfile": "default",
        "countryCode": "GB",
        "createdAt": "2019-04-25T07:27:13.099Z",
        "exampleAudioUrl": null,
        "gender": "MALE",
        "id": "11dbfbd1-872a-4edc-8e27-db73f1cdd3db",
        "isActive": true,
        "isHighestQuality": true,
        "isLanguageDefault": null,
        "isPremium": true,
        "label": "Jack",
        "language": Object {
          "code": "en",
          "createdAt": "2019-05-16T12:51:57.546Z",
          "id": "95f01039-fe8e-412d-a542-7089303b84c8",
          "isActive": true,
          "name": "English",
          "nativeName": "English",
          "updatedAt": "2019-05-16T12:51:57.546Z",
        },
        "languageCode": "en-GB",
        "name": "en-GB-Wavenet-B",
        "naturalSampleRateHertz": 24000,
        "pitch": 0,
        "speakingRate": 1,
        "synthesizer": "Google",
        "updatedAt": "2019-06-20T12:38:50.546Z",
      },
      Object {
        "audioProfile": "default",
        "countryCode": "GB",
        "createdAt": "2019-04-25T07:27:13.130Z",
        "exampleAudioUrl": "https://storage-development.playpost.app/voices/b735e14e-33ad-4ce9-9985-b868c822c554.wav",
        "gender": "MALE",
        "id": "b735e14e-33ad-4ce9-9985-b868c822c554",
        "isActive": true,
        "isHighestQuality": true,
        "isLanguageDefault": null,
        "isPremium": true,
        "label": "Jacob",
        "language": Object {
          "code": "en",
          "createdAt": "2019-05-16T12:51:57.546Z",
          "id": "95f01039-fe8e-412d-a542-7089303b84c8",
          "isActive": true,
          "name": "English",
          "nativeName": "English",
          "updatedAt": "2019-05-16T12:51:57.546Z",
        },
        "languageCode": "en-GB",
        "name": "en-GB-Wavenet-D",
        "naturalSampleRateHertz": 24000,
        "pitch": 0,
        "speakingRate": 1,
        "synthesizer": "Google",
        "updatedAt": "2019-06-20T12:38:50.549Z",
      },
      Object {
        "audioProfile": "default",
        "countryCode": "US",
        "createdAt": "2019-04-25T11:35:03.678Z",
        "exampleAudioUrl": "https://storage-development.playpost.app/voices/d2ede165-9dc0-4969-af8c-f4ff3716da53.mp3",
        "gender": "FEMALE",
        "id": "d2ede165-9dc0-4969-af8c-f4ff3716da53",
        "isActive": true,
        "isHighestQuality": false,
        "isLanguageDefault": true,
        "isPremium": false,
        "label": "Joanna",
        "language": Object {
          "code": "en",
          "createdAt": "2019-05-16T12:51:57.546Z",
          "id": "95f01039-fe8e-412d-a542-7089303b84c8",
          "isActive": true,
          "name": "English",
          "nativeName": "English",
          "updatedAt": "2019-05-16T12:51:57.546Z",
        },
        "languageCode": "en-US",
        "name": "Joanna",
        "naturalSampleRateHertz": null,
        "pitch": 0,
        "speakingRate": 1,
        "synthesizer": "AWS",
        "updatedAt": "2019-06-20T12:38:50.913Z",
      },
      Object {
        "audioProfile": "default",
        "countryCode": "US",
        "createdAt": "2019-04-25T11:35:03.611Z",
        "exampleAudioUrl": "https://storage-development.playpost.app/voices/6e4c1ec7-98a0-464b-b6e9-53e00629df6c.mp3",
        "gender": "MALE",
        "id": "6e4c1ec7-98a0-464b-b6e9-53e00629df6c",
        "isActive": true,
        "isHighestQuality": false,
        "isLanguageDefault": null,
        "isPremium": true,
        "label": "Matthew",
        "language": Object {
          "code": "en",
          "createdAt": "2019-05-16T12:51:57.546Z",
          "id": "95f01039-fe8e-412d-a542-7089303b84c8",
          "isActive": true,
          "name": "English",
          "nativeName": "English",
          "updatedAt": "2019-05-16T12:51:57.546Z",
        },
        "languageCode": "en-US",
        "name": "Matthew",
        "naturalSampleRateHertz": null,
        "pitch": 0,
        "speakingRate": 1,
        "synthesizer": "AWS",
        "updatedAt": "2019-05-16T15:01:14.598Z",
      },
      Object {
        "audioProfile": "default",
        "countryCode": "GB",
        "createdAt": "2019-04-25T07:27:13.086Z",
        "exampleAudioUrl": null,
        "gender": "FEMALE",
        "id": "55f9c7ab-1599-47e0-826b-2bb97aefcb99",
        "isActive": true,
        "isHighestQuality": true,
        "isLanguageDefault": null,
        "isPremium": true,
        "label": "Millie",
        "language": Object {
          "code": "en",
          "createdAt": "2019-05-16T12:51:57.546Z",
          "id": "95f01039-fe8e-412d-a542-7089303b84c8",
          "isActive": true,
          "name": "English",
          "nativeName": "English",
          "updatedAt": "2019-05-16T12:51:57.546Z",
        },
        "languageCode": "en-GB",
        "name": "en-GB-Wavenet-A",
        "naturalSampleRateHertz": 24000,
        "pitch": 0,
        "speakingRate": 1,
        "synthesizer": "Google",
        "updatedAt": "2019-06-20T12:38:50.552Z",
      },
      Object {
        "audioProfile": "default",
        "countryCode": "US",
        "createdAt": "2019-04-25T07:27:13.226Z",
        "exampleAudioUrl": "https://storage-development.playpost.app/voices/701be98d-3eb3-4c38-a504-d70d706f5d37.wav",
        "gender": "MALE",
        "id": "701be98d-3eb3-4c38-a504-d70d706f5d37",
        "isActive": true,
        "isHighestQuality": true,
        "isLanguageDefault": null,
        "isPremium": true,
        "label": "Richard",
        "language": Object {
          "code": "en",
          "createdAt": "2019-05-16T12:51:57.546Z",
          "id": "95f01039-fe8e-412d-a542-7089303b84c8",
          "isActive": true,
          "name": "English",
          "nativeName": "English",
          "updatedAt": "2019-05-16T12:51:57.546Z",
        },
        "languageCode": "en-US",
        "name": "en-US-Wavenet-D",
        "naturalSampleRateHertz": 24000,
        "pitch": 0,
        "speakingRate": 1,
        "synthesizer": "Google",
        "updatedAt": "2019-06-20T12:38:50.179Z",
      },
    ],
  },
  "French": Object {
    "code": "fr",
    "createdAt": "2019-05-16T12:52:56.203Z",
    "id": "be6b0434-8a3e-4747-863e-1842cf3eadd0",
    "isActive": true,
    "name": "French",
    "nativeName": "Français",
    "updatedAt": "2019-05-16T12:52:56.203Z",
    "voices": Array [
      Object {
        "audioProfile": "default",
        "countryCode": "FR",
        "createdAt": "2019-04-25T07:27:13.321Z",
        "exampleAudioUrl": null,
        "gender": "MALE",
        "id": "76daf494-999d-45ee-8b4b-6aa0a1fa4901",
        "isActive": true,
        "isHighestQuality": true,
        "isLanguageDefault": null,
        "isPremium": true,
        "label": "Armand",
        "language": Object {
          "code": "fr",
          "createdAt": "2019-05-16T12:52:56.203Z",
          "id": "be6b0434-8a3e-4747-863e-1842cf3eadd0",
          "isActive": true,
          "name": "French",
          "nativeName": "Français",
          "updatedAt": "2019-05-16T12:52:56.203Z",
        },
        "languageCode": "fr-FR",
        "name": "fr-FR-Wavenet-B",
        "naturalSampleRateHertz": 24000,
        "pitch": 0,
        "speakingRate": 1,
        "synthesizer": "Google",
        "updatedAt": "2019-06-20T12:38:50.739Z",
      },
      Object {
        "audioProfile": "default",
        "countryCode": "FR",
        "createdAt": "2019-04-25T11:35:03.481Z",
        "exampleAudioUrl": null,
        "gender": "FEMALE",
        "id": "8966adf6-ebf6-432e-b2ba-b6d04c332c12",
        "isActive": true,
        "isHighestQuality": false,
        "isLanguageDefault": true,
        "isPremium": false,
        "label": "Céline",
        "language": Object {
          "code": "fr",
          "createdAt": "2019-05-16T12:52:56.203Z",
          "id": "be6b0434-8a3e-4747-863e-1842cf3eadd0",
          "isActive": true,
          "name": "French",
          "nativeName": "Français",
          "updatedAt": "2019-05-16T12:52:56.203Z",
        },
        "languageCode": "fr-FR",
        "name": "Céline",
        "naturalSampleRateHertz": null,
        "pitch": 0,
        "speakingRate": 1,
        "synthesizer": "AWS",
        "updatedAt": "2019-06-20T12:38:50.873Z",
      },
      Object {
        "audioProfile": "default",
        "countryCode": "CA",
        "createdAt": "2019-04-25T11:35:03.494Z",
        "exampleAudioUrl": null,
        "gender": "FEMALE",
        "id": "b4c157d4-4720-4779-8067-e27e5e228f94",
        "isActive": true,
        "isHighestQuality": false,
        "isLanguageDefault": null,
        "isPremium": true,
        "label": "Chantal",
        "language": Object {
          "code": "fr",
          "createdAt": "2019-05-16T12:52:56.203Z",
          "id": "be6b0434-8a3e-4747-863e-1842cf3eadd0",
          "isActive": true,
          "name": "French",
          "nativeName": "Français",
          "updatedAt": "2019-05-16T12:52:56.203Z",
        },
        "languageCode": "fr-CA",
        "name": "Chantal",
        "naturalSampleRateHertz": null,
        "pitch": 0,
        "speakingRate": 1,
        "synthesizer": "AWS",
        "updatedAt": "2019-05-16T15:01:14.693Z",
      },
      Object {
        "audioProfile": "default",
        "countryCode": "CA",
        "createdAt": "2019-04-25T07:27:13.260Z",
        "exampleAudioUrl": null,
        "gender": "FEMALE",
        "id": "8f322b9f-4e28-4c31-a533-e9f0479e4d2a",
        "isActive": true,
        "isHighestQuality": true,
        "isLanguageDefault": null,
        "isPremium": true,
        "label": "Danielle",
        "language": Object {
          "code": "fr",
          "createdAt": "2019-05-16T12:52:56.203Z",
          "id": "be6b0434-8a3e-4747-863e-1842cf3eadd0",
          "isActive": true,
          "name": "French",
          "nativeName": "Français",
          "updatedAt": "2019-05-16T12:52:56.203Z",
        },
        "languageCode": "fr-CA",
        "name": "fr-CA-Wavenet-A",
        "naturalSampleRateHertz": 24000,
        "pitch": 0,
        "speakingRate": 1,
        "synthesizer": "Google",
        "updatedAt": "2019-06-20T12:38:50.515Z",
      },
      Object {
        "audioProfile": "default",
        "countryCode": "FR",
        "createdAt": "2019-04-25T07:27:13.310Z",
        "exampleAudioUrl": null,
        "gender": "FEMALE",
        "id": "5b42a593-6409-4d4b-88d3-09aeec96c4d8",
        "isActive": true,
        "isHighestQuality": true,
        "isLanguageDefault": null,
        "isPremium": true,
        "label": "Eloise",
        "language": Object {
          "code": "fr",
          "createdAt": "2019-05-16T12:52:56.203Z",
          "id": "be6b0434-8a3e-4747-863e-1842cf3eadd0",
          "isActive": true,
          "name": "French",
          "nativeName": "Français",
          "updatedAt": "2019-05-16T12:52:56.203Z",
        },
        "languageCode": "fr-FR",
        "name": "fr-FR-Wavenet-A",
        "naturalSampleRateHertz": 24000,
        "pitch": 0,
        "speakingRate": 1,
        "synthesizer": "Google",
        "updatedAt": "2019-06-20T12:38:50.742Z",
      },
      Object {
        "audioProfile": "default",
        "countryCode": "FR",
        "createdAt": "2019-04-25T07:27:13.334Z",
        "exampleAudioUrl": null,
        "gender": "FEMALE",
        "id": "d0f552bf-9f72-4bb0-853f-ccadd1a46e11",
        "isActive": true,
        "isHighestQuality": true,
        "isLanguageDefault": null,
        "isPremium": true,
        "label": "Esmée",
        "language": Object {
          "code": "fr",
          "createdAt": "2019-05-16T12:52:56.203Z",
          "id": "be6b0434-8a3e-4747-863e-1842cf3eadd0",
          "isActive": true,
          "name": "French",
          "nativeName": "Français",
          "updatedAt": "2019-05-16T12:52:56.203Z",
        },
        "languageCode": "fr-FR",
        "name": "fr-FR-Wavenet-C",
        "naturalSampleRateHertz": 24000,
        "pitch": 0,
        "speakingRate": 1,
        "synthesizer": "Google",
        "updatedAt": "2019-06-20T12:38:50.714Z",
      },
      Object {
        "audioProfile": "default",
        "countryCode": "CA",
        "createdAt": "2019-04-25T07:27:13.283Z",
        "exampleAudioUrl": null,
        "gender": "FEMALE",
        "id": "2d28ada8-4143-4e91-bda9-e6d4573c4353",
        "isActive": true,
        "isHighestQuality": true,
        "isLanguageDefault": null,
        "isPremium": true,
        "label": "Estelle",
        "language": Object {
          "code": "fr",
          "createdAt": "2019-05-16T12:52:56.203Z",
          "id": "be6b0434-8a3e-4747-863e-1842cf3eadd0",
          "isActive": true,
          "name": "French",
          "nativeName": "Français",
          "updatedAt": "2019-05-16T12:52:56.203Z",
        },
        "languageCode": "fr-CA",
        "name": "fr-CA-Wavenet-C",
        "naturalSampleRateHertz": 24000,
        "pitch": 0,
        "speakingRate": 1,
        "synthesizer": "Google",
        "updatedAt": "2019-06-20T12:38:50.622Z",
      },
      Object {
        "audioProfile": "default",
        "countryCode": "FR",
        "createdAt": "2019-04-25T07:27:13.345Z",
        "exampleAudioUrl": null,
        "gender": "MALE",
        "id": "5d88c0f9-9387-41a0-a908-b3a31f8bdba2",
        "isActive": true,
        "isHighestQuality": true,
        "isLanguageDefault": null,
        "isPremium": true,
        "label": "Francis",
        "language": Object {
          "code": "fr",
          "createdAt": "2019-05-16T12:52:56.203Z",
          "id": "be6b0434-8a3e-4747-863e-1842cf3eadd0",
          "isActive": true,
          "name": "French",
          "nativeName": "Français",
          "updatedAt": "2019-05-16T12:52:56.203Z",
        },
        "languageCode": "fr-FR",
        "name": "fr-FR-Wavenet-D",
        "naturalSampleRateHertz": 24000,
        "pitch": 0,
        "speakingRate": 1,
        "synthesizer": "Google",
        "updatedAt": "2019-06-20T12:38:50.736Z",
      },
      Object {
        "audioProfile": "default",
        "countryCode": "CA",
        "createdAt": "2019-04-25T07:27:13.295Z",
        "exampleAudioUrl": null,
        "gender": "MALE",
        "id": "36109c9a-dba5-480e-8ded-6ea7c2b1c1a9",
        "isActive": true,
        "isHighestQuality": true,
        "isLanguageDefault": null,
        "isPremium": true,
        "label": "Hugo",
        "language": Object {
          "code": "fr",
          "createdAt": "2019-05-16T12:52:56.203Z",
          "id": "be6b0434-8a3e-4747-863e-1842cf3eadd0",
          "isActive": true,
          "name": "French",
          "nativeName": "Français",
          "updatedAt": "2019-05-16T12:52:56.203Z",
        },
        "languageCode": "fr-CA",
        "name": "fr-CA-Wavenet-D",
        "naturalSampleRateHertz": 24000,
        "pitch": 0,
        "speakingRate": 1,
        "synthesizer": "Google",
        "updatedAt": "2019-06-20T12:38:50.613Z",
      },
      Object {
        "audioProfile": "default",
        "countryCode": "FR",
        "createdAt": "2019-04-25T11:35:03.468Z",
        "exampleAudioUrl": null,
        "gender": "FEMALE",
        "id": "5c07d84b-9e2d-42ba-89ae-5650a291eff4",
        "isActive": true,
        "isHighestQuality": false,
        "isLanguageDefault": null,
        "isPremium": true,
        "label": "Léa",
        "language": Object {
          "code": "fr",
          "createdAt": "2019-05-16T12:52:56.203Z",
          "id": "be6b0434-8a3e-4747-863e-1842cf3eadd0",
          "isActive": true,
          "name": "French",
          "nativeName": "Français",
          "updatedAt": "2019-05-16T12:52:56.203Z",
        },
        "languageCode": "fr-FR",
        "name": "Léa",
        "naturalSampleRateHertz": null,
        "pitch": 0,
        "speakingRate": 1,
        "synthesizer": "AWS",
        "updatedAt": "2019-05-16T15:01:14.561Z",
      },
      Object {
        "audioProfile": "default",
        "countryCode": "CA",
        "createdAt": "2019-04-25T07:27:13.274Z",
        "exampleAudioUrl": null,
        "gender": "MALE",
        "id": "8c345c8e-3a90-44da-aeb6-d5eee1571d50",
        "isActive": true,
        "isHighestQuality": true,
        "isLanguageDefault": null,
        "isPremium": true,
        "label": "Léo",
        "language": Object {
          "code": "fr",
          "createdAt": "2019-05-16T12:52:56.203Z",
          "id": "be6b0434-8a3e-4747-863e-1842cf3eadd0",
          "isActive": true,
          "name": "French",
          "nativeName": "Français",
          "updatedAt": "2019-05-16T12:52:56.203Z",
        },
        "languageCode": "fr-CA",
        "name": "fr-CA-Wavenet-B",
        "naturalSampleRateHertz": 24000,
        "pitch": 0,
        "speakingRate": 1,
        "synthesizer": "Google",
        "updatedAt": "2019-06-20T12:38:50.817Z",
      },
      Object {
        "audioProfile": "default",
        "countryCode": "FR",
        "createdAt": "2019-04-25T11:35:03.455Z",
        "exampleAudioUrl": null,
        "gender": "MALE",
        "id": "143109f3-92da-4b12-87ad-320b4487b17e",
        "isActive": true,
        "isHighestQuality": false,
        "isLanguageDefault": null,
        "isPremium": true,
        "label": "Mathieu",
        "language": Object {
          "code": "fr",
          "createdAt": "2019-05-16T12:52:56.203Z",
          "id": "be6b0434-8a3e-4747-863e-1842cf3eadd0",
          "isActive": true,
          "name": "French",
          "nativeName": "Français",
          "updatedAt": "2019-05-16T12:52:56.203Z",
        },
        "languageCode": "fr-FR",
        "name": "Mathieu",
        "naturalSampleRateHertz": null,
        "pitch": 0,
        "speakingRate": 1,
        "synthesizer": "AWS",
        "updatedAt": "2019-05-16T15:01:14.570Z",
      },
    ],
  },
  "German": Object {
    "code": "de",
    "createdAt": "2019-05-16T12:52:16.404Z",
    "id": "80dacadd-8451-4d50-a3d4-b67d4870f1f9",
    "isActive": true,
    "name": "German",
    "nativeName": "Deutsch",
    "updatedAt": "2019-05-16T12:52:16.404Z",
    "voices": Array [
      Object {
        "audioProfile": "default",
        "countryCode": "DE",
        "createdAt": "2019-04-25T07:27:12.988Z",
        "exampleAudioUrl": null,
        "gender": "MALE",
        "id": "5483f48b-55e7-47ce-bfbd-f0d52fc73a04",
        "isActive": true,
        "isHighestQuality": true,
        "isLanguageDefault": null,
        "isPremium": true,
        "label": "Albert",
        "language": Object {
          "code": "de",
          "createdAt": "2019-05-16T12:52:16.404Z",
          "id": "80dacadd-8451-4d50-a3d4-b67d4870f1f9",
          "isActive": true,
          "name": "German",
          "nativeName": "Deutsch",
          "updatedAt": "2019-05-16T12:52:16.404Z",
        },
        "languageCode": "de-DE",
        "name": "de-DE-Wavenet-B",
        "naturalSampleRateHertz": 24000,
        "pitch": 0,
        "speakingRate": 1,
        "synthesizer": "Google",
        "updatedAt": "2019-06-20T12:38:50.810Z",
      },
      Object {
        "audioProfile": "default",
        "countryCode": "DE",
        "createdAt": "2019-04-25T07:27:12.975Z",
        "exampleAudioUrl": null,
        "gender": "FEMALE",
        "id": "5668110f-db1c-49bd-a054-42588f6c8039",
        "isActive": true,
        "isHighestQuality": true,
        "isLanguageDefault": null,
        "isPremium": true,
        "label": "Annika",
        "language": Object {
          "code": "de",
          "createdAt": "2019-05-16T12:52:16.404Z",
          "id": "80dacadd-8451-4d50-a3d4-b67d4870f1f9",
          "isActive": true,
          "name": "German",
          "nativeName": "Deutsch",
          "updatedAt": "2019-05-16T12:52:16.404Z",
        },
        "languageCode": "de-DE",
        "name": "de-DE-Wavenet-A",
        "naturalSampleRateHertz": 24000,
        "pitch": 0,
        "speakingRate": 1,
        "synthesizer": "Google",
        "updatedAt": "2019-06-20T12:38:50.543Z",
      },
      Object {
        "audioProfile": "default",
        "countryCode": "DE",
        "createdAt": "2019-04-25T07:27:13.015Z",
        "exampleAudioUrl": null,
        "gender": "MALE",
        "id": "81583216-e9d8-4d41-9ea8-254d59244edf",
        "isActive": true,
        "isHighestQuality": true,
        "isLanguageDefault": null,
        "isPremium": true,
        "label": "Claus",
        "language": Object {
          "code": "de",
          "createdAt": "2019-05-16T12:52:16.404Z",
          "id": "80dacadd-8451-4d50-a3d4-b67d4870f1f9",
          "isActive": true,
          "name": "German",
          "nativeName": "Deutsch",
          "updatedAt": "2019-05-16T12:52:16.404Z",
        },
        "languageCode": "de-DE",
        "name": "de-DE-Wavenet-D",
        "naturalSampleRateHertz": 24000,
        "pitch": 0,
        "speakingRate": 1,
        "synthesizer": "Google",
        "updatedAt": "2019-06-20T12:38:50.674Z",
      },
      Object {
        "audioProfile": "default",
        "countryCode": "DE",
        "createdAt": "2019-04-25T07:27:13.002Z",
        "exampleAudioUrl": null,
        "gender": "FEMALE",
        "id": "4a32f448-8010-475d-afac-59e73b05893d",
        "isActive": true,
        "isHighestQuality": true,
        "isLanguageDefault": null,
        "isPremium": true,
        "label": "Edith",
        "language": Object {
          "code": "de",
          "createdAt": "2019-05-16T12:52:16.404Z",
          "id": "80dacadd-8451-4d50-a3d4-b67d4870f1f9",
          "isActive": true,
          "name": "German",
          "nativeName": "Deutsch",
          "updatedAt": "2019-05-16T12:52:16.404Z",
        },
        "languageCode": "de-DE",
        "name": "de-DE-Wavenet-C",
        "naturalSampleRateHertz": 24000,
        "pitch": 0,
        "speakingRate": 1,
        "synthesizer": "Google",
        "updatedAt": "2019-06-20T12:38:50.777Z",
      },
      Object {
        "audioProfile": "default",
        "countryCode": "DE",
        "createdAt": "2019-04-25T11:35:03.832Z",
        "exampleAudioUrl": null,
        "gender": "MALE",
        "id": "7a0adf8e-e4a1-4edd-8030-45b6623fccef",
        "isActive": true,
        "isHighestQuality": false,
        "isLanguageDefault": true,
        "isPremium": false,
        "label": "Hans",
        "language": Object {
          "code": "de",
          "createdAt": "2019-05-16T12:52:16.404Z",
          "id": "80dacadd-8451-4d50-a3d4-b67d4870f1f9",
          "isActive": true,
          "name": "German",
          "nativeName": "Deutsch",
          "updatedAt": "2019-05-16T12:52:16.404Z",
        },
        "languageCode": "de-DE",
        "name": "Hans",
        "naturalSampleRateHertz": null,
        "pitch": 0,
        "speakingRate": 1,
        "synthesizer": "AWS",
        "updatedAt": "2019-06-20T12:38:50.869Z",
      },
      Object {
        "audioProfile": "default",
        "countryCode": "DE",
        "createdAt": "2019-04-25T11:35:03.818Z",
        "exampleAudioUrl": null,
        "gender": "FEMALE",
        "id": "dd9bcef2-9912-402a-8f8e-af81f98dc4b4",
        "isActive": true,
        "isHighestQuality": false,
        "isLanguageDefault": null,
        "isPremium": true,
        "label": "Marlene",
        "language": Object {
          "code": "de",
          "createdAt": "2019-05-16T12:52:16.404Z",
          "id": "80dacadd-8451-4d50-a3d4-b67d4870f1f9",
          "isActive": true,
          "name": "German",
          "nativeName": "Deutsch",
          "updatedAt": "2019-05-16T12:52:16.404Z",
        },
        "languageCode": "de-DE",
        "name": "Marlene",
        "naturalSampleRateHertz": null,
        "pitch": 0,
        "speakingRate": 1,
        "synthesizer": "AWS",
        "updatedAt": "2019-05-16T15:01:14.539Z",
      },
      Object {
        "audioProfile": "default",
        "countryCode": "DE",
        "createdAt": "2019-04-25T11:35:03.798Z",
        "exampleAudioUrl": null,
        "gender": "FEMALE",
        "id": "3930d072-d563-4e3c-96f5-45cc534470b4",
        "isActive": true,
        "isHighestQuality": false,
        "isLanguageDefault": null,
        "isPremium": true,
        "label": "Vicki",
        "language": Object {
          "code": "de",
          "createdAt": "2019-05-16T12:52:16.404Z",
          "id": "80dacadd-8451-4d50-a3d4-b67d4870f1f9",
          "isActive": true,
          "name": "German",
          "nativeName": "Deutsch",
          "updatedAt": "2019-05-16T12:52:16.404Z",
        },
        "languageCode": "de-DE",
        "name": "Vicki",
        "naturalSampleRateHertz": null,
        "pitch": 0,
        "speakingRate": 1,
        "synthesizer": "AWS",
        "updatedAt": "2019-05-16T15:01:14.575Z",
      },
    ],
  },
  "Spanish": Object {
    "code": "es",
    "createdAt": "2019-05-16T12:52:41.748Z",
    "id": "ba90fa75-e9fd-419d-a0f7-294ac5181bdd",
    "isActive": true,
    "name": "Spanish",
    "nativeName": "Español",
    "updatedAt": "2019-05-16T12:52:41.748Z",
    "voices": Array [
      Object {
        "audioProfile": "default",
        "countryCode": "ES",
        "createdAt": "2019-04-25T11:35:03.574Z",
        "exampleAudioUrl": null,
        "gender": "FEMALE",
        "id": "b9bf2c50-205e-48e7-9a7c-e3bc91e2615b",
        "isActive": true,
        "isHighestQuality": false,
        "isLanguageDefault": true,
        "isPremium": false,
        "label": "Conchita",
        "language": Object {
          "code": "es",
          "createdAt": "2019-05-16T12:52:41.748Z",
          "id": "ba90fa75-e9fd-419d-a0f7-294ac5181bdd",
          "isActive": true,
          "name": "Spanish",
          "nativeName": "Español",
          "updatedAt": "2019-05-16T12:52:41.748Z",
        },
        "languageCode": "es-ES",
        "name": "Conchita",
        "naturalSampleRateHertz": null,
        "pitch": 0,
        "speakingRate": 1,
        "synthesizer": "AWS",
        "updatedAt": "2019-06-20T12:38:50.893Z",
      },
      Object {
        "audioProfile": "default",
        "countryCode": "ES",
        "createdAt": "2019-04-25T11:35:03.561Z",
        "exampleAudioUrl": null,
        "gender": "MALE",
        "id": "c2a7a148-a4ed-4c00-990c-2a567fcb0239",
        "isActive": true,
        "isHighestQuality": false,
        "isLanguageDefault": null,
        "isPremium": true,
        "label": "Enrique",
        "language": Object {
          "code": "es",
          "createdAt": "2019-05-16T12:52:41.748Z",
          "id": "ba90fa75-e9fd-419d-a0f7-294ac5181bdd",
          "isActive": true,
          "name": "Spanish",
          "nativeName": "Español",
          "updatedAt": "2019-05-16T12:52:41.748Z",
        },
        "languageCode": "es-ES",
        "name": "Enrique",
        "naturalSampleRateHertz": null,
        "pitch": 0,
        "speakingRate": 1,
        "synthesizer": "AWS",
        "updatedAt": "2019-05-16T15:01:14.597Z",
      },
      Object {
        "audioProfile": "default",
        "countryCode": "ES",
        "createdAt": "2019-04-25T11:35:03.547Z",
        "exampleAudioUrl": null,
        "gender": "FEMALE",
        "id": "a6e63d95-182b-47fc-9904-55acc9c3d9c7",
        "isActive": true,
        "isHighestQuality": false,
        "isLanguageDefault": null,
        "isPremium": true,
        "label": "Lucia",
        "language": Object {
          "code": "es",
          "createdAt": "2019-05-16T12:52:41.748Z",
          "id": "ba90fa75-e9fd-419d-a0f7-294ac5181bdd",
          "isActive": true,
          "name": "Spanish",
          "nativeName": "Español",
          "updatedAt": "2019-05-16T12:52:41.748Z",
        },
        "languageCode": "es-ES",
        "name": "Lucia",
        "naturalSampleRateHertz": null,
        "pitch": 0,
        "speakingRate": 1,
        "synthesizer": "AWS",
        "updatedAt": "2019-05-16T15:01:14.544Z",
      },
      Object {
        "audioProfile": "default",
        "countryCode": "ES",
        "createdAt": "2019-04-25T07:27:13.855Z",
        "exampleAudioUrl": null,
        "gender": "FEMALE",
        "id": "5b934da3-13ee-4f73-ba6d-f47b88285eb6",
        "isActive": true,
        "isHighestQuality": false,
        "isLanguageDefault": null,
        "isPremium": true,
        "label": "Maya",
        "language": Object {
          "code": "es",
          "createdAt": "2019-05-16T12:52:41.748Z",
          "id": "ba90fa75-e9fd-419d-a0f7-294ac5181bdd",
          "isActive": true,
          "name": "Spanish",
          "nativeName": "Español",
          "updatedAt": "2019-05-16T12:52:41.748Z",
        },
        "languageCode": "es-ES",
        "name": "es-ES-Standard-A",
        "naturalSampleRateHertz": 24000,
        "pitch": 0,
        "speakingRate": 1,
        "synthesizer": "Google",
        "updatedAt": "2019-06-20T12:38:50.150Z",
      },
      Object {
        "audioProfile": "default",
        "countryCode": "MX",
        "createdAt": "2019-04-25T11:35:03.532Z",
        "exampleAudioUrl": null,
        "gender": "FEMALE",
        "id": "bc1970ec-6f06-4388-b7e9-063a08a7c5cd",
        "isActive": true,
        "isHighestQuality": false,
        "isLanguageDefault": null,
        "isPremium": true,
        "label": "Mia",
        "language": Object {
          "code": "es",
          "createdAt": "2019-05-16T12:52:41.748Z",
          "id": "ba90fa75-e9fd-419d-a0f7-294ac5181bdd",
          "isActive": true,
          "name": "Spanish",
          "nativeName": "Español",
          "updatedAt": "2019-05-16T12:52:41.748Z",
        },
        "languageCode": "es-MX",
        "name": "Mia",
        "naturalSampleRateHertz": null,
        "pitch": 0,
        "speakingRate": 1,
        "synthesizer": "AWS",
        "updatedAt": "2019-05-16T15:01:14.548Z",
      },
      Object {
        "audioProfile": "default",
        "countryCode": "US",
        "createdAt": "2019-04-25T11:35:03.520Z",
        "exampleAudioUrl": null,
        "gender": "MALE",
        "id": "b3e6c807-733b-465e-a76d-82880cad0993",
        "isActive": true,
        "isHighestQuality": false,
        "isLanguageDefault": null,
        "isPremium": true,
        "label": "Miguel",
        "language": Object {
          "code": "es",
          "createdAt": "2019-05-16T12:52:41.748Z",
          "id": "ba90fa75-e9fd-419d-a0f7-294ac5181bdd",
          "isActive": true,
          "name": "Spanish",
          "nativeName": "Español",
          "updatedAt": "2019-05-16T12:52:41.748Z",
        },
        "languageCode": "es-US",
        "name": "Miguel",
        "naturalSampleRateHertz": null,
        "pitch": 0,
        "speakingRate": 1,
        "synthesizer": "AWS",
        "updatedAt": "2019-05-16T15:01:14.550Z",
      },
      Object {
        "audioProfile": "default",
        "countryCode": "US",
        "createdAt": "2019-04-25T11:35:03.507Z",
        "exampleAudioUrl": null,
        "gender": "FEMALE",
        "id": "59aec332-20dd-4d2e-8dad-e88c770f36d4",
        "isActive": true,
        "isHighestQuality": false,
        "isLanguageDefault": null,
        "isPremium": true,
        "label": "Penélope",
        "language": Object {
          "code": "es",
          "createdAt": "2019-05-16T12:52:41.748Z",
          "id": "ba90fa75-e9fd-419d-a0f7-294ac5181bdd",
          "isActive": true,
          "name": "Spanish",
          "nativeName": "Español",
          "updatedAt": "2019-05-16T12:52:41.748Z",
        },
        "languageCode": "es-US",
        "name": "Penélope",
        "naturalSampleRateHertz": null,
        "pitch": 0,
        "speakingRate": 1,
        "synthesizer": "AWS",
        "updatedAt": "2019-05-16T15:01:14.554Z",
      },
    ],
  },
}
`;

exports[`voices selector selectLanguagesWithActiveVoices should return the languages with active voices 1`] = `
Array [
  Object {
    "code": "en",
    "createdAt": "2019-05-16T12:51:57.546Z",
    "id": "95f01039-fe8e-412d-a542-7089303b84c8",
    "isActive": true,
    "name": "English",
    "nativeName": "English",
    "updatedAt": "2019-05-16T12:51:57.546Z",
    "voices": Array [
      Object {
        "audioProfile": "default",
        "countryCode": "US",
        "createdAt": "2019-04-25T07:27:13.226Z",
        "exampleAudioUrl": "https://storage-development.playpost.app/voices/701be98d-3eb3-4c38-a504-d70d706f5d37.wav",
        "gender": "MALE",
        "id": "701be98d-3eb3-4c38-a504-d70d706f5d37",
        "isActive": true,
        "isHighestQuality": true,
        "isLanguageDefault": null,
        "isPremium": true,
        "label": "Richard",
        "language": Object {
          "code": "en",
          "createdAt": "2019-05-16T12:51:57.546Z",
          "id": "95f01039-fe8e-412d-a542-7089303b84c8",
          "isActive": true,
          "name": "English",
          "nativeName": "English",
          "updatedAt": "2019-05-16T12:51:57.546Z",
        },
        "languageCode": "en-US",
        "name": "en-US-Wavenet-D",
        "naturalSampleRateHertz": 24000,
        "pitch": 0,
        "speakingRate": 1,
        "synthesizer": "Google",
        "updatedAt": "2019-06-20T12:38:50.179Z",
      },
      Object {
        "audioProfile": "default",
        "countryCode": "US",
        "createdAt": "2019-04-25T07:27:13.250Z",
        "exampleAudioUrl": "https://storage-development.playpost.app/voices/3675e6db-307e-48de-b5ff-13b38470632f.wav",
        "gender": "FEMALE",
        "id": "3675e6db-307e-48de-b5ff-13b38470632f",
        "isActive": true,
        "isHighestQuality": true,
        "isLanguageDefault": null,
        "isPremium": true,
        "label": "Emily",
        "language": Object {
          "code": "en",
          "createdAt": "2019-05-16T12:51:57.546Z",
          "id": "95f01039-fe8e-412d-a542-7089303b84c8",
          "isActive": true,
          "name": "English",
          "nativeName": "English",
          "updatedAt": "2019-05-16T12:51:57.546Z",
        },
        "languageCode": "en-US",
        "name": "en-US-Wavenet-F",
        "naturalSampleRateHertz": 24000,
        "pitch": 0,
        "speakingRate": 1,
        "synthesizer": "Google",
        "updatedAt": "2019-06-20T12:38:50.234Z",
      },
      Object {
        "audioProfile": "default",
        "countryCode": "GB",
        "createdAt": "2019-04-25T11:35:03.758Z",
        "exampleAudioUrl": null,
        "gender": "FEMALE",
        "id": "1a6136d5-fb0d-4543-a6f2-68feb020a31f",
        "isActive": true,
        "isHighestQuality": false,
        "isLanguageDefault": null,
        "isPremium": true,
        "label": "Amy",
        "language": Object {
          "code": "en",
          "createdAt": "2019-05-16T12:51:57.546Z",
          "id": "95f01039-fe8e-412d-a542-7089303b84c8",
          "isActive": true,
          "name": "English",
          "nativeName": "English",
          "updatedAt": "2019-05-16T12:51:57.546Z",
        },
        "languageCode": "en-GB",
        "name": "Amy",
        "naturalSampleRateHertz": null,
        "pitch": 0,
        "speakingRate": 1,
        "synthesizer": "AWS",
        "updatedAt": "2019-05-16T15:01:14.571Z",
      },
      Object {
        "audioProfile": "default",
        "countryCode": "GB",
        "createdAt": "2019-04-25T11:35:03.743Z",
        "exampleAudioUrl": null,
        "gender": "MALE",
        "id": "97170d75-94c1-4c46-972f-e8f1c1e17b1f",
        "isActive": true,
        "isHighestQuality": false,
        "isLanguageDefault": null,
        "isPremium": true,
        "label": "Brian",
        "language": Object {
          "code": "en",
          "createdAt": "2019-05-16T12:51:57.546Z",
          "id": "95f01039-fe8e-412d-a542-7089303b84c8",
          "isActive": true,
          "name": "English",
          "nativeName": "English",
          "updatedAt": "2019-05-16T12:51:57.546Z",
        },
        "languageCode": "en-GB",
        "name": "Brian",
        "naturalSampleRateHertz": null,
        "pitch": 0,
        "speakingRate": 1,
        "synthesizer": "AWS",
        "updatedAt": "2019-05-16T15:01:14.570Z",
      },
      Object {
        "audioProfile": "default",
        "countryCode": "US",
        "createdAt": "2019-04-25T11:35:03.611Z",
        "exampleAudioUrl": "https://storage-development.playpost.app/voices/6e4c1ec7-98a0-464b-b6e9-53e00629df6c.mp3",
        "gender": "MALE",
        "id": "6e4c1ec7-98a0-464b-b6e9-53e00629df6c",
        "isActive": true,
        "isHighestQuality": false,
        "isLanguageDefault": null,
        "isPremium": true,
        "label": "Matthew",
        "language": Object {
          "code": "en",
          "createdAt": "2019-05-16T12:51:57.546Z",
          "id": "95f01039-fe8e-412d-a542-7089303b84c8",
          "isActive": true,
          "name": "English",
          "nativeName": "English",
          "updatedAt": "2019-05-16T12:51:57.546Z",
        },
        "languageCode": "en-US",
        "name": "Matthew",
        "naturalSampleRateHertz": null,
        "pitch": 0,
        "speakingRate": 1,
        "synthesizer": "AWS",
        "updatedAt": "2019-05-16T15:01:14.598Z",
      },
      Object {
        "audioProfile": "default",
        "countryCode": "GB",
        "createdAt": "2019-04-25T07:27:13.114Z",
        "exampleAudioUrl": null,
        "gender": "FEMALE",
        "id": "2534d51a-11c4-446f-a4da-a3f946305c44",
        "isActive": true,
        "isHighestQuality": true,
        "isLanguageDefault": null,
        "isPremium": true,
        "label": "Amelia",
        "language": Object {
          "code": "en",
          "createdAt": "2019-05-16T12:51:57.546Z",
          "id": "95f01039-fe8e-412d-a542-7089303b84c8",
          "isActive": true,
          "name": "English",
          "nativeName": "English",
          "updatedAt": "2019-05-16T12:51:57.546Z",
        },
        "languageCode": "en-GB",
        "name": "en-GB-Wavenet-C",
        "naturalSampleRateHertz": 24000,
        "pitch": 0,
        "speakingRate": 1,
        "synthesizer": "Google",
        "updatedAt": "2019-06-20T12:38:50.540Z",
      },
      Object {
        "audioProfile": "default",
        "countryCode": "GB",
        "createdAt": "2019-04-25T07:27:13.099Z",
        "exampleAudioUrl": null,
        "gender": "MALE",
        "id": "11dbfbd1-872a-4edc-8e27-db73f1cdd3db",
        "isActive": true,
        "isHighestQuality": true,
        "isLanguageDefault": null,
        "isPremium": true,
        "label": "Jack",
        "language": Object {
          "code": "en",
          "createdAt": "2019-05-16T12:51:57.546Z",
          "id": "95f01039-fe8e-412d-a542-7089303b84c8",
          "isActive": true,
          "name": "English",
          "nativeName": "English",
          "updatedAt": "2019-05-16T12:51:57.546Z",
        },
        "languageCode": "en-GB",
        "name": "en-GB-Wavenet-B",
        "naturalSampleRateHertz": 24000,
        "pitch": 0,
        "speakingRate": 1,
        "synthesizer": "Google",
        "updatedAt": "2019-06-20T12:38:50.546Z",
      },
      Object {
        "audioProfile": "default",
        "countryCode": "GB",
        "createdAt": "2019-04-25T07:27:13.130Z",
        "exampleAudioUrl": "https://storage-development.playpost.app/voices/b735e14e-33ad-4ce9-9985-b868c822c554.wav",
        "gender": "MALE",
        "id": "b735e14e-33ad-4ce9-9985-b868c822c554",
        "isActive": true,
        "isHighestQuality": true,
        "isLanguageDefault": null,
        "isPremium": true,
        "label": "Jacob",
        "language": Object {
          "code": "en",
          "createdAt": "2019-05-16T12:51:57.546Z",
          "id": "95f01039-fe8e-412d-a542-7089303b84c8",
          "isActive": true,
          "name": "English",
          "nativeName": "English",
          "updatedAt": "2019-05-16T12:51:57.546Z",
        },
        "languageCode": "en-GB",
        "name": "en-GB-Wavenet-D",
        "naturalSampleRateHertz": 24000,
        "pitch": 0,
        "speakingRate": 1,
        "synthesizer": "Google",
        "updatedAt": "2019-06-20T12:38:50.549Z",
      },
      Object {
        "audioProfile": "default",
        "countryCode": "GB",
        "createdAt": "2019-04-25T07:27:13.086Z",
        "exampleAudioUrl": null,
        "gender": "FEMALE",
        "id": "55f9c7ab-1599-47e0-826b-2bb97aefcb99",
        "isActive": true,
        "isHighestQuality": true,
        "isLanguageDefault": null,
        "isPremium": true,
        "label": "Millie",
        "language": Object {
          "code": "en",
          "createdAt": "2019-05-16T12:51:57.546Z",
          "id": "95f01039-fe8e-412d-a542-7089303b84c8",
          "isActive": true,
          "name": "English",
          "nativeName": "English",
          "updatedAt": "2019-05-16T12:51:57.546Z",
        },
        "languageCode": "en-GB",
        "name": "en-GB-Wavenet-A",
        "naturalSampleRateHertz": 24000,
        "pitch": 0,
        "speakingRate": 1,
        "synthesizer": "Google",
        "updatedAt": "2019-06-20T12:38:50.552Z",
      },
      Object {
        "audioProfile": "default",
        "countryCode": "US",
        "createdAt": "2019-04-25T11:35:03.678Z",
        "exampleAudioUrl": "https://storage-development.playpost.app/voices/d2ede165-9dc0-4969-af8c-f4ff3716da53.mp3",
        "gender": "FEMALE",
        "id": "d2ede165-9dc0-4969-af8c-f4ff3716da53",
        "isActive": true,
        "isHighestQuality": false,
        "isLanguageDefault": true,
        "isPremium": false,
        "label": "Joanna",
        "language": Object {
          "code": "en",
          "createdAt": "2019-05-16T12:51:57.546Z",
          "id": "95f01039-fe8e-412d-a542-7089303b84c8",
          "isActive": true,
          "name": "English",
          "nativeName": "English",
          "updatedAt": "2019-05-16T12:51:57.546Z",
        },
        "languageCode": "en-US",
        "name": "Joanna",
        "naturalSampleRateHertz": null,
        "pitch": 0,
        "speakingRate": 1,
        "synthesizer": "AWS",
        "updatedAt": "2019-06-20T12:38:50.913Z",
      },
    ],
  },
  Object {
    "code": "nl",
    "createdAt": "2019-05-16T12:52:08.217Z",
    "id": "cd72f71c-dc59-4be7-8a40-0143fe6f0ad9",
    "isActive": true,
    "name": "Dutch",
    "nativeName": "Nederlands",
    "updatedAt": "2019-05-16T12:52:08.217Z",
    "voices": Array [
      Object {
        "audioProfile": "default",
        "countryCode": "NL",
        "createdAt": "2019-04-25T11:35:03.293Z",
        "exampleAudioUrl": "https://storage-development.playpost.app/voices/d4c0973c-5a36-4950-afe1-3e2224592c20.mp3",
        "gender": "MALE",
        "id": "d4c0973c-5a36-4950-afe1-3e2224592c20",
        "isActive": true,
        "isHighestQuality": false,
        "isLanguageDefault": true,
        "isPremium": false,
        "label": "Ruben",
        "language": Object {
          "code": "nl",
          "createdAt": "2019-05-16T12:52:08.217Z",
          "id": "cd72f71c-dc59-4be7-8a40-0143fe6f0ad9",
          "isActive": true,
          "name": "Dutch",
          "nativeName": "Nederlands",
          "updatedAt": "2019-05-16T12:52:08.217Z",
        },
        "languageCode": "nl-NL",
        "name": "Ruben",
        "naturalSampleRateHertz": null,
        "pitch": 0,
        "speakingRate": 1,
        "synthesizer": "AWS",
        "updatedAt": "2019-06-20T12:38:50.916Z",
      },
      Object {
        "audioProfile": "default",
        "countryCode": "NL",
        "createdAt": "2019-04-25T07:27:13.494Z",
        "exampleAudioUrl": "https://storage-development.playpost.app/voices/63dc3e3e-e04d-450b-ba08-7f97b484d78c.wav",
        "gender": "MALE",
        "id": "63dc3e3e-e04d-450b-ba08-7f97b484d78c",
        "isActive": true,
        "isHighestQuality": true,
        "isLanguageDefault": null,
        "isPremium": true,
        "label": "Stefan",
        "language": Object {
          "code": "nl",
          "createdAt": "2019-05-16T12:52:08.217Z",
          "id": "cd72f71c-dc59-4be7-8a40-0143fe6f0ad9",
          "isActive": true,
          "name": "Dutch",
          "nativeName": "Nederlands",
          "updatedAt": "2019-05-16T12:52:08.217Z",
        },
        "languageCode": "nl-NL",
        "name": "nl-NL-Wavenet-B",
        "naturalSampleRateHertz": 24000,
        "pitch": 0,
        "speakingRate": 1,
        "synthesizer": "Google",
        "updatedAt": "2019-06-20T12:38:50.252Z",
      },
      Object {
        "audioProfile": "default",
        "countryCode": "NL",
        "createdAt": "2019-04-25T11:35:03.308Z",
        "exampleAudioUrl": null,
        "gender": "FEMALE",
        "id": "66dafa12-042a-481f-bf6b-e6ac23689c90",
        "isActive": true,
        "isHighestQuality": false,
        "isLanguageDefault": null,
        "isPremium": true,
        "label": "Lotte",
        "language": Object {
          "code": "nl",
          "createdAt": "2019-05-16T12:52:08.217Z",
          "id": "cd72f71c-dc59-4be7-8a40-0143fe6f0ad9",
          "isActive": true,
          "name": "Dutch",
          "nativeName": "Nederlands",
          "updatedAt": "2019-05-16T12:52:08.217Z",
        },
        "languageCode": "nl-NL",
        "name": "Lotte",
        "naturalSampleRateHertz": null,
        "pitch": 0,
        "speakingRate": 1,
        "synthesizer": "AWS",
        "updatedAt": "2019-04-25T11:35:03.308Z",
      },
      Object {
        "audioProfile": "default",
        "countryCode": "NL",
        "createdAt": "2019-04-25T07:27:13.518Z",
        "exampleAudioUrl": "https://storage-development.playpost.app/voices/6672a747-3a12-42b3-98fd-878221c236ad.wav",
        "gender": "FEMALE",
        "id": "6672a747-3a12-42b3-98fd-878221c236ad",
        "isActive": true,
        "isHighestQuality": true,
        "isLanguageDefault": null,
        "isPremium": true,
        "label": "Ineke",
        "language": Object {
          "code": "nl",
          "createdAt": "2019-05-16T12:52:08.217Z",
          "id": "cd72f71c-dc59-4be7-8a40-0143fe6f0ad9",
          "isActive": true,
          "name": "Dutch",
          "nativeName": "Nederlands",
          "updatedAt": "2019-05-16T12:52:08.217Z",
        },
        "languageCode": "nl-NL",
        "name": "nl-NL-Wavenet-D",
        "naturalSampleRateHertz": 24000,
        "pitch": 0,
        "speakingRate": 1,
        "synthesizer": "Google",
        "updatedAt": "2019-06-20T12:38:50.532Z",
      },
      Object {
        "audioProfile": "default",
        "countryCode": "NL",
        "createdAt": "2019-04-25T07:27:13.529Z",
        "exampleAudioUrl": null,
        "gender": "FEMALE",
        "id": "f7e1582b-db97-4067-a0a7-61d05f4dcc03",
        "isActive": true,
        "isHighestQuality": true,
        "isLanguageDefault": null,
        "isPremium": true,
        "label": "Marije",
        "language": Object {
          "code": "nl",
          "createdAt": "2019-05-16T12:52:08.217Z",
          "id": "cd72f71c-dc59-4be7-8a40-0143fe6f0ad9",
          "isActive": true,
          "name": "Dutch",
          "nativeName": "Nederlands",
          "updatedAt": "2019-05-16T12:52:08.217Z",
        },
        "languageCode": "nl-NL",
        "name": "nl-NL-Wavenet-E",
        "naturalSampleRateHertz": 24000,
        "pitch": 0,
        "speakingRate": 1,
        "synthesizer": "Google",
        "updatedAt": "2019-06-20T12:38:50.591Z",
      },
      Object {
        "audioProfile": "default",
        "countryCode": "NL",
        "createdAt": "2019-04-25T07:27:13.542Z",
        "exampleAudioUrl": "https://storage-development.playpost.app/voices/9fbd2cd5-b0e6-4c0b-b87d-f89b75f2b9ac.wav",
        "gender": "FEMALE",
        "id": "9fbd2cd5-b0e6-4c0b-b87d-f89b75f2b9ac",
        "isActive": true,
        "isHighestQuality": true,
        "isLanguageDefault": null,
        "isPremium": true,
        "label": "Denise",
        "language": Object {
          "code": "nl",
          "createdAt": "2019-05-16T12:52:08.217Z",
          "id": "cd72f71c-dc59-4be7-8a40-0143fe6f0ad9",
          "isActive": true,
          "name": "Dutch",
          "nativeName": "Nederlands",
          "updatedAt": "2019-05-16T12:52:08.217Z",
        },
        "languageCode": "nl-NL",
        "name": "nl-NL-Wavenet-A",
        "naturalSampleRateHertz": 24000,
        "pitch": 0,
        "speakingRate": 1,
        "synthesizer": "Google",
        "updatedAt": "2019-06-20T12:38:50.625Z",
      },
      Object {
        "audioProfile": "default",
        "countryCode": "NL",
        "createdAt": "2019-04-25T07:27:13.506Z",
        "exampleAudioUrl": "https://storage-development.playpost.app/voices/31c97a6d-7f2b-4a7d-9e70-55e6ec680fc9.wav",
        "gender": "MALE",
        "id": "31c97a6d-7f2b-4a7d-9e70-55e6ec680fc9",
        "isActive": true,
        "isHighestQuality": true,
        "isLanguageDefault": null,
        "isPremium": true,
        "label": "Koen",
        "language": Object {
          "code": "nl",
          "createdAt": "2019-05-16T12:52:08.217Z",
          "id": "cd72f71c-dc59-4be7-8a40-0143fe6f0ad9",
          "isActive": true,
          "name": "Dutch",
          "nativeName": "Nederlands",
          "updatedAt": "2019-05-16T12:52:08.217Z",
        },
        "languageCode": "nl-NL",
        "name": "nl-NL-Wavenet-C",
        "naturalSampleRateHertz": 24000,
        "pitch": 0,
        "speakingRate": 1,
        "synthesizer": "Google",
        "updatedAt": "2019-06-20T12:38:50.773Z",
      },
    ],
  },
  Object {
    "code": "en",
    "createdAt": "2019-05-16T12:51:57.546Z",
    "id": "95f01039-fe8e-412d-a542-7089303b84c8",
    "isActive": true,
    "name": "English",
    "nativeName": "English",
    "updatedAt": "2019-05-16T12:51:57.546Z",
    "voices": Array [
      Object {
        "audioProfile": "default",
        "countryCode": "US",
        "createdAt": "2019-04-25T07:27:13.226Z",
        "exampleAudioUrl": "https://storage-development.playpost.app/voices/701be98d-3eb3-4c38-a504-d70d706f5d37.wav",
        "gender": "MALE",
        "id": "701be98d-3eb3-4c38-a504-d70d706f5d37",
        "isActive": true,
        "isHighestQuality": true,
        "isLanguageDefault": null,
        "isPremium": true,
        "label": "Richard",
        "language": Object {
          "code": "en",
          "createdAt": "2019-05-16T12:51:57.546Z",
          "id": "95f01039-fe8e-412d-a542-7089303b84c8",
          "isActive": true,
          "name": "English",
          "nativeName": "English",
          "updatedAt": "2019-05-16T12:51:57.546Z",
        },
        "languageCode": "en-US",
        "name": "en-US-Wavenet-D",
        "naturalSampleRateHertz": 24000,
        "pitch": 0,
        "speakingRate": 1,
        "synthesizer": "Google",
        "updatedAt": "2019-06-20T12:38:50.179Z",
      },
      Object {
        "audioProfile": "default",
        "countryCode": "US",
        "createdAt": "2019-04-25T07:27:13.250Z",
        "exampleAudioUrl": "https://storage-development.playpost.app/voices/3675e6db-307e-48de-b5ff-13b38470632f.wav",
        "gender": "FEMALE",
        "id": "3675e6db-307e-48de-b5ff-13b38470632f",
        "isActive": true,
        "isHighestQuality": true,
        "isLanguageDefault": null,
        "isPremium": true,
        "label": "Emily",
        "language": Object {
          "code": "en",
          "createdAt": "2019-05-16T12:51:57.546Z",
          "id": "95f01039-fe8e-412d-a542-7089303b84c8",
          "isActive": true,
          "name": "English",
          "nativeName": "English",
          "updatedAt": "2019-05-16T12:51:57.546Z",
        },
        "languageCode": "en-US",
        "name": "en-US-Wavenet-F",
        "naturalSampleRateHertz": 24000,
        "pitch": 0,
        "speakingRate": 1,
        "synthesizer": "Google",
        "updatedAt": "2019-06-20T12:38:50.234Z",
      },
      Object {
        "audioProfile": "default",
        "countryCode": "GB",
        "createdAt": "2019-04-25T11:35:03.758Z",
        "exampleAudioUrl": null,
        "gender": "FEMALE",
        "id": "1a6136d5-fb0d-4543-a6f2-68feb020a31f",
        "isActive": true,
        "isHighestQuality": false,
        "isLanguageDefault": null,
        "isPremium": true,
        "label": "Amy",
        "language": Object {
          "code": "en",
          "createdAt": "2019-05-16T12:51:57.546Z",
          "id": "95f01039-fe8e-412d-a542-7089303b84c8",
          "isActive": true,
          "name": "English",
          "nativeName": "English",
          "updatedAt": "2019-05-16T12:51:57.546Z",
        },
        "languageCode": "en-GB",
        "name": "Amy",
        "naturalSampleRateHertz": null,
        "pitch": 0,
        "speakingRate": 1,
        "synthesizer": "AWS",
        "updatedAt": "2019-05-16T15:01:14.571Z",
      },
      Object {
        "audioProfile": "default",
        "countryCode": "GB",
        "createdAt": "2019-04-25T11:35:03.743Z",
        "exampleAudioUrl": null,
        "gender": "MALE",
        "id": "97170d75-94c1-4c46-972f-e8f1c1e17b1f",
        "isActive": true,
        "isHighestQuality": false,
        "isLanguageDefault": null,
        "isPremium": true,
        "label": "Brian",
        "language": Object {
          "code": "en",
          "createdAt": "2019-05-16T12:51:57.546Z",
          "id": "95f01039-fe8e-412d-a542-7089303b84c8",
          "isActive": true,
          "name": "English",
          "nativeName": "English",
          "updatedAt": "2019-05-16T12:51:57.546Z",
        },
        "languageCode": "en-GB",
        "name": "Brian",
        "naturalSampleRateHertz": null,
        "pitch": 0,
        "speakingRate": 1,
        "synthesizer": "AWS",
        "updatedAt": "2019-05-16T15:01:14.570Z",
      },
      Object {
        "audioProfile": "default",
        "countryCode": "US",
        "createdAt": "2019-04-25T11:35:03.611Z",
        "exampleAudioUrl": "https://storage-development.playpost.app/voices/6e4c1ec7-98a0-464b-b6e9-53e00629df6c.mp3",
        "gender": "MALE",
        "id": "6e4c1ec7-98a0-464b-b6e9-53e00629df6c",
        "isActive": true,
        "isHighestQuality": false,
        "isLanguageDefault": null,
        "isPremium": true,
        "label": "Matthew",
        "language": Object {
          "code": "en",
          "createdAt": "2019-05-16T12:51:57.546Z",
          "id": "95f01039-fe8e-412d-a542-7089303b84c8",
          "isActive": true,
          "name": "English",
          "nativeName": "English",
          "updatedAt": "2019-05-16T12:51:57.546Z",
        },
        "languageCode": "en-US",
        "name": "Matthew",
        "naturalSampleRateHertz": null,
        "pitch": 0,
        "speakingRate": 1,
        "synthesizer": "AWS",
        "updatedAt": "2019-05-16T15:01:14.598Z",
      },
      Object {
        "audioProfile": "default",
        "countryCode": "GB",
        "createdAt": "2019-04-25T07:27:13.114Z",
        "exampleAudioUrl": null,
        "gender": "FEMALE",
        "id": "2534d51a-11c4-446f-a4da-a3f946305c44",
        "isActive": true,
        "isHighestQuality": true,
        "isLanguageDefault": null,
        "isPremium": true,
        "label": "Amelia",
        "language": Object {
          "code": "en",
          "createdAt": "2019-05-16T12:51:57.546Z",
          "id": "95f01039-fe8e-412d-a542-7089303b84c8",
          "isActive": true,
          "name": "English",
          "nativeName": "English",
          "updatedAt": "2019-05-16T12:51:57.546Z",
        },
        "languageCode": "en-GB",
        "name": "en-GB-Wavenet-C",
        "naturalSampleRateHertz": 24000,
        "pitch": 0,
        "speakingRate": 1,
        "synthesizer": "Google",
        "updatedAt": "2019-06-20T12:38:50.540Z",
      },
      Object {
        "audioProfile": "default",
        "countryCode": "GB",
        "createdAt": "2019-04-25T07:27:13.099Z",
        "exampleAudioUrl": null,
        "gender": "MALE",
        "id": "11dbfbd1-872a-4edc-8e27-db73f1cdd3db",
        "isActive": true,
        "isHighestQuality": true,
        "isLanguageDefault": null,
        "isPremium": true,
        "label": "Jack",
        "language": Object {
          "code": "en",
          "createdAt": "2019-05-16T12:51:57.546Z",
          "id": "95f01039-fe8e-412d-a542-7089303b84c8",
          "isActive": true,
          "name": "English",
          "nativeName": "English",
          "updatedAt": "2019-05-16T12:51:57.546Z",
        },
        "languageCode": "en-GB",
        "name": "en-GB-Wavenet-B",
        "naturalSampleRateHertz": 24000,
        "pitch": 0,
        "speakingRate": 1,
        "synthesizer": "Google",
        "updatedAt": "2019-06-20T12:38:50.546Z",
      },
      Object {
        "audioProfile": "default",
        "countryCode": "GB",
        "createdAt": "2019-04-25T07:27:13.130Z",
        "exampleAudioUrl": "https://storage-development.playpost.app/voices/b735e14e-33ad-4ce9-9985-b868c822c554.wav",
        "gender": "MALE",
        "id": "b735e14e-33ad-4ce9-9985-b868c822c554",
        "isActive": true,
        "isHighestQuality": true,
        "isLanguageDefault": null,
        "isPremium": true,
        "label": "Jacob",
        "language": Object {
          "code": "en",
          "createdAt": "2019-05-16T12:51:57.546Z",
          "id": "95f01039-fe8e-412d-a542-7089303b84c8",
          "isActive": true,
          "name": "English",
          "nativeName": "English",
          "updatedAt": "2019-05-16T12:51:57.546Z",
        },
        "languageCode": "en-GB",
        "name": "en-GB-Wavenet-D",
        "naturalSampleRateHertz": 24000,
        "pitch": 0,
        "speakingRate": 1,
        "synthesizer": "Google",
        "updatedAt": "2019-06-20T12:38:50.549Z",
      },
      Object {
        "audioProfile": "default",
        "countryCode": "GB",
        "createdAt": "2019-04-25T07:27:13.086Z",
        "exampleAudioUrl": null,
        "gender": "FEMALE",
        "id": "55f9c7ab-1599-47e0-826b-2bb97aefcb99",
        "isActive": true,
        "isHighestQuality": true,
        "isLanguageDefault": null,
        "isPremium": true,
        "label": "Millie",
        "language": Object {
          "code": "en",
          "createdAt": "2019-05-16T12:51:57.546Z",
          "id": "95f01039-fe8e-412d-a542-7089303b84c8",
          "isActive": true,
          "name": "English",
          "nativeName": "English",
          "updatedAt": "2019-05-16T12:51:57.546Z",
        },
        "languageCode": "en-GB",
        "name": "en-GB-Wavenet-A",
        "naturalSampleRateHertz": 24000,
        "pitch": 0,
        "speakingRate": 1,
        "synthesizer": "Google",
        "updatedAt": "2019-06-20T12:38:50.552Z",
      },
      Object {
        "audioProfile": "default",
        "countryCode": "US",
        "createdAt": "2019-04-25T11:35:03.678Z",
        "exampleAudioUrl": "https://storage-development.playpost.app/voices/d2ede165-9dc0-4969-af8c-f4ff3716da53.mp3",
        "gender": "FEMALE",
        "id": "d2ede165-9dc0-4969-af8c-f4ff3716da53",
        "isActive": true,
        "isHighestQuality": false,
        "isLanguageDefault": true,
        "isPremium": false,
        "label": "Joanna",
        "language": Object {
          "code": "en",
          "createdAt": "2019-05-16T12:51:57.546Z",
          "id": "95f01039-fe8e-412d-a542-7089303b84c8",
          "isActive": true,
          "name": "English",
          "nativeName": "English",
          "updatedAt": "2019-05-16T12:51:57.546Z",
        },
        "languageCode": "en-US",
        "name": "Joanna",
        "naturalSampleRateHertz": null,
        "pitch": 0,
        "speakingRate": 1,
        "synthesizer": "AWS",
        "updatedAt": "2019-06-20T12:38:50.913Z",
      },
    ],
  },
  Object {
    "code": "fr",
    "createdAt": "2019-05-16T12:52:56.203Z",
    "id": "be6b0434-8a3e-4747-863e-1842cf3eadd0",
    "isActive": true,
    "name": "French",
    "nativeName": "Français",
    "updatedAt": "2019-05-16T12:52:56.203Z",
    "voices": Array [
      Object {
        "audioProfile": "default",
        "countryCode": "FR",
        "createdAt": "2019-04-25T11:35:03.468Z",
        "exampleAudioUrl": null,
        "gender": "FEMALE",
        "id": "5c07d84b-9e2d-42ba-89ae-5650a291eff4",
        "isActive": true,
        "isHighestQuality": false,
        "isLanguageDefault": null,
        "isPremium": true,
        "label": "Léa",
        "language": Object {
          "code": "fr",
          "createdAt": "2019-05-16T12:52:56.203Z",
          "id": "be6b0434-8a3e-4747-863e-1842cf3eadd0",
          "isActive": true,
          "name": "French",
          "nativeName": "Français",
          "updatedAt": "2019-05-16T12:52:56.203Z",
        },
        "languageCode": "fr-FR",
        "name": "Léa",
        "naturalSampleRateHertz": null,
        "pitch": 0,
        "speakingRate": 1,
        "synthesizer": "AWS",
        "updatedAt": "2019-05-16T15:01:14.561Z",
      },
      Object {
        "audioProfile": "default",
        "countryCode": "CA",
        "createdAt": "2019-04-25T11:35:03.494Z",
        "exampleAudioUrl": null,
        "gender": "FEMALE",
        "id": "b4c157d4-4720-4779-8067-e27e5e228f94",
        "isActive": true,
        "isHighestQuality": false,
        "isLanguageDefault": null,
        "isPremium": true,
        "label": "Chantal",
        "language": Object {
          "code": "fr",
          "createdAt": "2019-05-16T12:52:56.203Z",
          "id": "be6b0434-8a3e-4747-863e-1842cf3eadd0",
          "isActive": true,
          "name": "French",
          "nativeName": "Français",
          "updatedAt": "2019-05-16T12:52:56.203Z",
        },
        "languageCode": "fr-CA",
        "name": "Chantal",
        "naturalSampleRateHertz": null,
        "pitch": 0,
        "speakingRate": 1,
        "synthesizer": "AWS",
        "updatedAt": "2019-05-16T15:01:14.693Z",
      },
      Object {
        "audioProfile": "default",
        "countryCode": "FR",
        "createdAt": "2019-04-25T11:35:03.481Z",
        "exampleAudioUrl": null,
        "gender": "FEMALE",
        "id": "8966adf6-ebf6-432e-b2ba-b6d04c332c12",
        "isActive": true,
        "isHighestQuality": false,
        "isLanguageDefault": true,
        "isPremium": false,
        "label": "Céline",
        "language": Object {
          "code": "fr",
          "createdAt": "2019-05-16T12:52:56.203Z",
          "id": "be6b0434-8a3e-4747-863e-1842cf3eadd0",
          "isActive": true,
          "name": "French",
          "nativeName": "Français",
          "updatedAt": "2019-05-16T12:52:56.203Z",
        },
        "languageCode": "fr-FR",
        "name": "Céline",
        "naturalSampleRateHertz": null,
        "pitch": 0,
        "speakingRate": 1,
        "synthesizer": "AWS",
        "updatedAt": "2019-06-20T12:38:50.873Z",
      },
      Object {
        "audioProfile": "default",
        "countryCode": "FR",
        "createdAt": "2019-04-25T11:35:03.455Z",
        "exampleAudioUrl": null,
        "gender": "MALE",
        "id": "143109f3-92da-4b12-87ad-320b4487b17e",
        "isActive": true,
        "isHighestQuality": false,
        "isLanguageDefault": null,
        "isPremium": true,
        "label": "Mathieu",
        "language": Object {
          "code": "fr",
          "createdAt": "2019-05-16T12:52:56.203Z",
          "id": "be6b0434-8a3e-4747-863e-1842cf3eadd0",
          "isActive": true,
          "name": "French",
          "nativeName": "Français",
          "updatedAt": "2019-05-16T12:52:56.203Z",
        },
        "languageCode": "fr-FR",
        "name": "Mathieu",
        "naturalSampleRateHertz": null,
        "pitch": 0,
        "speakingRate": 1,
        "synthesizer": "AWS",
        "updatedAt": "2019-05-16T15:01:14.570Z",
      },
      Object {
        "audioProfile": "default",
        "countryCode": "CA",
        "createdAt": "2019-04-25T07:27:13.260Z",
        "exampleAudioUrl": null,
        "gender": "FEMALE",
        "id": "8f322b9f-4e28-4c31-a533-e9f0479e4d2a",
        "isActive": true,
        "isHighestQuality": true,
        "isLanguageDefault": null,
        "isPremium": true,
        "label": "Danielle",
        "language": Object {
          "code": "fr",
          "createdAt": "2019-05-16T12:52:56.203Z",
          "id": "be6b0434-8a3e-4747-863e-1842cf3eadd0",
          "isActive": true,
          "name": "French",
          "nativeName": "Français",
          "updatedAt": "2019-05-16T12:52:56.203Z",
        },
        "languageCode": "fr-CA",
        "name": "fr-CA-Wavenet-A",
        "naturalSampleRateHertz": 24000,
        "pitch": 0,
        "speakingRate": 1,
        "synthesizer": "Google",
        "updatedAt": "2019-06-20T12:38:50.515Z",
      },
      Object {
        "audioProfile": "default",
        "countryCode": "CA",
        "createdAt": "2019-04-25T07:27:13.295Z",
        "exampleAudioUrl": null,
        "gender": "MALE",
        "id": "36109c9a-dba5-480e-8ded-6ea7c2b1c1a9",
        "isActive": true,
        "isHighestQuality": true,
        "isLanguageDefault": null,
        "isPremium": true,
        "label": "Hugo",
        "language": Object {
          "code": "fr",
          "createdAt": "2019-05-16T12:52:56.203Z",
          "id": "be6b0434-8a3e-4747-863e-1842cf3eadd0",
          "isActive": true,
          "name": "French",
          "nativeName": "Français",
          "updatedAt": "2019-05-16T12:52:56.203Z",
        },
        "languageCode": "fr-CA",
        "name": "fr-CA-Wavenet-D",
        "naturalSampleRateHertz": 24000,
        "pitch": 0,
        "speakingRate": 1,
        "synthesizer": "Google",
        "updatedAt": "2019-06-20T12:38:50.613Z",
      },
      Object {
        "audioProfile": "default",
        "countryCode": "CA",
        "createdAt": "2019-04-25T07:27:13.283Z",
        "exampleAudioUrl": null,
        "gender": "FEMALE",
        "id": "2d28ada8-4143-4e91-bda9-e6d4573c4353",
        "isActive": true,
        "isHighestQuality": true,
        "isLanguageDefault": null,
        "isPremium": true,
        "label": "Estelle",
        "language": Object {
          "code": "fr",
          "createdAt": "2019-05-16T12:52:56.203Z",
          "id": "be6b0434-8a3e-4747-863e-1842cf3eadd0",
          "isActive": true,
          "name": "French",
          "nativeName": "Français",
          "updatedAt": "2019-05-16T12:52:56.203Z",
        },
        "languageCode": "fr-CA",
        "name": "fr-CA-Wavenet-C",
        "naturalSampleRateHertz": 24000,
        "pitch": 0,
        "speakingRate": 1,
        "synthesizer": "Google",
        "updatedAt": "2019-06-20T12:38:50.622Z",
      },
      Object {
        "audioProfile": "default",
        "countryCode": "FR",
        "createdAt": "2019-04-25T07:27:13.334Z",
        "exampleAudioUrl": null,
        "gender": "FEMALE",
        "id": "d0f552bf-9f72-4bb0-853f-ccadd1a46e11",
        "isActive": true,
        "isHighestQuality": true,
        "isLanguageDefault": null,
        "isPremium": true,
        "label": "Esmée",
        "language": Object {
          "code": "fr",
          "createdAt": "2019-05-16T12:52:56.203Z",
          "id": "be6b0434-8a3e-4747-863e-1842cf3eadd0",
          "isActive": true,
          "name": "French",
          "nativeName": "Français",
          "updatedAt": "2019-05-16T12:52:56.203Z",
        },
        "languageCode": "fr-FR",
        "name": "fr-FR-Wavenet-C",
        "naturalSampleRateHertz": 24000,
        "pitch": 0,
        "speakingRate": 1,
        "synthesizer": "Google",
        "updatedAt": "2019-06-20T12:38:50.714Z",
      },
      Object {
        "audioProfile": "default",
        "countryCode": "FR",
        "createdAt": "2019-04-25T07:27:13.321Z",
        "exampleAudioUrl": null,
        "gender": "MALE",
        "id": "76daf494-999d-45ee-8b4b-6aa0a1fa4901",
        "isActive": true,
        "isHighestQuality": true,
        "isLanguageDefault": null,
        "isPremium": true,
        "label": "Armand",
        "language": Object {
          "code": "fr",
          "createdAt": "2019-05-16T12:52:56.203Z",
          "id": "be6b0434-8a3e-4747-863e-1842cf3eadd0",
          "isActive": true,
          "name": "French",
          "nativeName": "Français",
          "updatedAt": "2019-05-16T12:52:56.203Z",
        },
        "languageCode": "fr-FR",
        "name": "fr-FR-Wavenet-B",
        "naturalSampleRateHertz": 24000,
        "pitch": 0,
        "speakingRate": 1,
        "synthesizer": "Google",
        "updatedAt": "2019-06-20T12:38:50.739Z",
      },
      Object {
        "audioProfile": "default",
        "countryCode": "FR",
        "createdAt": "2019-04-25T07:27:13.310Z",
        "exampleAudioUrl": null,
        "gender": "FEMALE",
        "id": "5b42a593-6409-4d4b-88d3-09aeec96c4d8",
        "isActive": true,
        "isHighestQuality": true,
        "isLanguageDefault": null,
        "isPremium": true,
        "label": "Eloise",
        "language": Object {
          "code": "fr",
          "createdAt": "2019-05-16T12:52:56.203Z",
          "id": "be6b0434-8a3e-4747-863e-1842cf3eadd0",
          "isActive": true,
          "name": "French",
          "nativeName": "Français",
          "updatedAt": "2019-05-16T12:52:56.203Z",
        },
        "languageCode": "fr-FR",
        "name": "fr-FR-Wavenet-A",
        "naturalSampleRateHertz": 24000,
        "pitch": 0,
        "speakingRate": 1,
        "synthesizer": "Google",
        "updatedAt": "2019-06-20T12:38:50.742Z",
      },
      Object {
        "audioProfile": "default",
        "countryCode": "CA",
        "createdAt": "2019-04-25T07:27:13.274Z",
        "exampleAudioUrl": null,
        "gender": "MALE",
        "id": "8c345c8e-3a90-44da-aeb6-d5eee1571d50",
        "isActive": true,
        "isHighestQuality": true,
        "isLanguageDefault": null,
        "isPremium": true,
        "label": "Léo",
        "language": Object {
          "code": "fr",
          "createdAt": "2019-05-16T12:52:56.203Z",
          "id": "be6b0434-8a3e-4747-863e-1842cf3eadd0",
          "isActive": true,
          "name": "French",
          "nativeName": "Français",
          "updatedAt": "2019-05-16T12:52:56.203Z",
        },
        "languageCode": "fr-CA",
        "name": "fr-CA-Wavenet-B",
        "naturalSampleRateHertz": 24000,
        "pitch": 0,
        "speakingRate": 1,
        "synthesizer": "Google",
        "updatedAt": "2019-06-20T12:38:50.817Z",
      },
      Object {
        "audioProfile": "default",
        "countryCode": "FR",
        "createdAt": "2019-04-25T07:27:13.345Z",
        "exampleAudioUrl": null,
        "gender": "MALE",
        "id": "5d88c0f9-9387-41a0-a908-b3a31f8bdba2",
        "isActive": true,
        "isHighestQuality": true,
        "isLanguageDefault": null,
        "isPremium": true,
        "label": "Francis",
        "language": Object {
          "code": "fr",
          "createdAt": "2019-05-16T12:52:56.203Z",
          "id": "be6b0434-8a3e-4747-863e-1842cf3eadd0",
          "isActive": true,
          "name": "French",
          "nativeName": "Français",
          "updatedAt": "2019-05-16T12:52:56.203Z",
        },
        "languageCode": "fr-FR",
        "name": "fr-FR-Wavenet-D",
        "naturalSampleRateHertz": 24000,
        "pitch": 0,
        "speakingRate": 1,
        "synthesizer": "Google",
        "updatedAt": "2019-06-20T12:38:50.736Z",
      },
    ],
  },
  Object {
    "code": "de",
    "createdAt": "2019-05-16T12:52:16.404Z",
    "id": "80dacadd-8451-4d50-a3d4-b67d4870f1f9",
    "isActive": true,
    "name": "German",
    "nativeName": "Deutsch",
    "updatedAt": "2019-05-16T12:52:16.404Z",
    "voices": Array [
      Object {
        "audioProfile": "default",
        "countryCode": "DE",
        "createdAt": "2019-04-25T11:35:03.832Z",
        "exampleAudioUrl": null,
        "gender": "MALE",
        "id": "7a0adf8e-e4a1-4edd-8030-45b6623fccef",
        "isActive": true,
        "isHighestQuality": false,
        "isLanguageDefault": true,
        "isPremium": false,
        "label": "Hans",
        "language": Object {
          "code": "de",
          "createdAt": "2019-05-16T12:52:16.404Z",
          "id": "80dacadd-8451-4d50-a3d4-b67d4870f1f9",
          "isActive": true,
          "name": "German",
          "nativeName": "Deutsch",
          "updatedAt": "2019-05-16T12:52:16.404Z",
        },
        "languageCode": "de-DE",
        "name": "Hans",
        "naturalSampleRateHertz": null,
        "pitch": 0,
        "speakingRate": 1,
        "synthesizer": "AWS",
        "updatedAt": "2019-06-20T12:38:50.869Z",
      },
      Object {
        "audioProfile": "default",
        "countryCode": "DE",
        "createdAt": "2019-04-25T11:35:03.818Z",
        "exampleAudioUrl": null,
        "gender": "FEMALE",
        "id": "dd9bcef2-9912-402a-8f8e-af81f98dc4b4",
        "isActive": true,
        "isHighestQuality": false,
        "isLanguageDefault": null,
        "isPremium": true,
        "label": "Marlene",
        "language": Object {
          "code": "de",
          "createdAt": "2019-05-16T12:52:16.404Z",
          "id": "80dacadd-8451-4d50-a3d4-b67d4870f1f9",
          "isActive": true,
          "name": "German",
          "nativeName": "Deutsch",
          "updatedAt": "2019-05-16T12:52:16.404Z",
        },
        "languageCode": "de-DE",
        "name": "Marlene",
        "naturalSampleRateHertz": null,
        "pitch": 0,
        "speakingRate": 1,
        "synthesizer": "AWS",
        "updatedAt": "2019-05-16T15:01:14.539Z",
      },
      Object {
        "audioProfile": "default",
        "countryCode": "DE",
        "createdAt": "2019-04-25T11:35:03.798Z",
        "exampleAudioUrl": null,
        "gender": "FEMALE",
        "id": "3930d072-d563-4e3c-96f5-45cc534470b4",
        "isActive": true,
        "isHighestQuality": false,
        "isLanguageDefault": null,
        "isPremium": true,
        "label": "Vicki",
        "language": Object {
          "code": "de",
          "createdAt": "2019-05-16T12:52:16.404Z",
          "id": "80dacadd-8451-4d50-a3d4-b67d4870f1f9",
          "isActive": true,
          "name": "German",
          "nativeName": "Deutsch",
          "updatedAt": "2019-05-16T12:52:16.404Z",
        },
        "languageCode": "de-DE",
        "name": "Vicki",
        "naturalSampleRateHertz": null,
        "pitch": 0,
        "speakingRate": 1,
        "synthesizer": "AWS",
        "updatedAt": "2019-05-16T15:01:14.575Z",
      },
      Object {
        "audioProfile": "default",
        "countryCode": "DE",
        "createdAt": "2019-04-25T07:27:12.975Z",
        "exampleAudioUrl": null,
        "gender": "FEMALE",
        "id": "5668110f-db1c-49bd-a054-42588f6c8039",
        "isActive": true,
        "isHighestQuality": true,
        "isLanguageDefault": null,
        "isPremium": true,
        "label": "Annika",
        "language": Object {
          "code": "de",
          "createdAt": "2019-05-16T12:52:16.404Z",
          "id": "80dacadd-8451-4d50-a3d4-b67d4870f1f9",
          "isActive": true,
          "name": "German",
          "nativeName": "Deutsch",
          "updatedAt": "2019-05-16T12:52:16.404Z",
        },
        "languageCode": "de-DE",
        "name": "de-DE-Wavenet-A",
        "naturalSampleRateHertz": 24000,
        "pitch": 0,
        "speakingRate": 1,
        "synthesizer": "Google",
        "updatedAt": "2019-06-20T12:38:50.543Z",
      },
      Object {
        "audioProfile": "default",
        "countryCode": "DE",
        "createdAt": "2019-04-25T07:27:13.015Z",
        "exampleAudioUrl": null,
        "gender": "MALE",
        "id": "81583216-e9d8-4d41-9ea8-254d59244edf",
        "isActive": true,
        "isHighestQuality": true,
        "isLanguageDefault": null,
        "isPremium": true,
        "label": "Claus",
        "language": Object {
          "code": "de",
          "createdAt": "2019-05-16T12:52:16.404Z",
          "id": "80dacadd-8451-4d50-a3d4-b67d4870f1f9",
          "isActive": true,
          "name": "German",
          "nativeName": "Deutsch",
          "updatedAt": "2019-05-16T12:52:16.404Z",
        },
        "languageCode": "de-DE",
        "name": "de-DE-Wavenet-D",
        "naturalSampleRateHertz": 24000,
        "pitch": 0,
        "speakingRate": 1,
        "synthesizer": "Google",
        "updatedAt": "2019-06-20T12:38:50.674Z",
      },
      Object {
        "audioProfile": "default",
        "countryCode": "DE",
        "createdAt": "2019-04-25T07:27:13.002Z",
        "exampleAudioUrl": null,
        "gender": "FEMALE",
        "id": "4a32f448-8010-475d-afac-59e73b05893d",
        "isActive": true,
        "isHighestQuality": true,
        "isLanguageDefault": null,
        "isPremium": true,
        "label": "Edith",
        "language": Object {
          "code": "de",
          "createdAt": "2019-05-16T12:52:16.404Z",
          "id": "80dacadd-8451-4d50-a3d4-b67d4870f1f9",
          "isActive": true,
          "name": "German",
          "nativeName": "Deutsch",
          "updatedAt": "2019-05-16T12:52:16.404Z",
        },
        "languageCode": "de-DE",
        "name": "de-DE-Wavenet-C",
        "naturalSampleRateHertz": 24000,
        "pitch": 0,
        "speakingRate": 1,
        "synthesizer": "Google",
        "updatedAt": "2019-06-20T12:38:50.777Z",
      },
      Object {
        "audioProfile": "default",
        "countryCode": "DE",
        "createdAt": "2019-04-25T07:27:12.988Z",
        "exampleAudioUrl": null,
        "gender": "MALE",
        "id": "5483f48b-55e7-47ce-bfbd-f0d52fc73a04",
        "isActive": true,
        "isHighestQuality": true,
        "isLanguageDefault": null,
        "isPremium": true,
        "label": "Albert",
        "language": Object {
          "code": "de",
          "createdAt": "2019-05-16T12:52:16.404Z",
          "id": "80dacadd-8451-4d50-a3d4-b67d4870f1f9",
          "isActive": true,
          "name": "German",
          "nativeName": "Deutsch",
          "updatedAt": "2019-05-16T12:52:16.404Z",
        },
        "languageCode": "de-DE",
        "name": "de-DE-Wavenet-B",
        "naturalSampleRateHertz": 24000,
        "pitch": 0,
        "speakingRate": 1,
        "synthesizer": "Google",
        "updatedAt": "2019-06-20T12:38:50.810Z",
      },
    ],
  },
  Object {
    "code": "es",
    "createdAt": "2019-05-16T12:52:41.748Z",
    "id": "ba90fa75-e9fd-419d-a0f7-294ac5181bdd",
    "isActive": true,
    "name": "Spanish",
    "nativeName": "Español",
    "updatedAt": "2019-05-16T12:52:41.748Z",
    "voices": Array [
      Object {
        "audioProfile": "default",
        "countryCode": "ES",
        "createdAt": "2019-04-25T07:27:13.855Z",
        "exampleAudioUrl": null,
        "gender": "FEMALE",
        "id": "5b934da3-13ee-4f73-ba6d-f47b88285eb6",
        "isActive": true,
        "isHighestQuality": false,
        "isLanguageDefault": null,
        "isPremium": true,
        "label": "Maya",
        "language": Object {
          "code": "es",
          "createdAt": "2019-05-16T12:52:41.748Z",
          "id": "ba90fa75-e9fd-419d-a0f7-294ac5181bdd",
          "isActive": true,
          "name": "Spanish",
          "nativeName": "Español",
          "updatedAt": "2019-05-16T12:52:41.748Z",
        },
        "languageCode": "es-ES",
        "name": "es-ES-Standard-A",
        "naturalSampleRateHertz": 24000,
        "pitch": 0,
        "speakingRate": 1,
        "synthesizer": "Google",
        "updatedAt": "2019-06-20T12:38:50.150Z",
      },
      Object {
        "audioProfile": "default",
        "countryCode": "ES",
        "createdAt": "2019-04-25T11:35:03.547Z",
        "exampleAudioUrl": null,
        "gender": "FEMALE",
        "id": "a6e63d95-182b-47fc-9904-55acc9c3d9c7",
        "isActive": true,
        "isHighestQuality": false,
        "isLanguageDefault": null,
        "isPremium": true,
        "label": "Lucia",
        "language": Object {
          "code": "es",
          "createdAt": "2019-05-16T12:52:41.748Z",
          "id": "ba90fa75-e9fd-419d-a0f7-294ac5181bdd",
          "isActive": true,
          "name": "Spanish",
          "nativeName": "Español",
          "updatedAt": "2019-05-16T12:52:41.748Z",
        },
        "languageCode": "es-ES",
        "name": "Lucia",
        "naturalSampleRateHertz": null,
        "pitch": 0,
        "speakingRate": 1,
        "synthesizer": "AWS",
        "updatedAt": "2019-05-16T15:01:14.544Z",
      },
      Object {
        "audioProfile": "default",
        "countryCode": "MX",
        "createdAt": "2019-04-25T11:35:03.532Z",
        "exampleAudioUrl": null,
        "gender": "FEMALE",
        "id": "bc1970ec-6f06-4388-b7e9-063a08a7c5cd",
        "isActive": true,
        "isHighestQuality": false,
        "isLanguageDefault": null,
        "isPremium": true,
        "label": "Mia",
        "language": Object {
          "code": "es",
          "createdAt": "2019-05-16T12:52:41.748Z",
          "id": "ba90fa75-e9fd-419d-a0f7-294ac5181bdd",
          "isActive": true,
          "name": "Spanish",
          "nativeName": "Español",
          "updatedAt": "2019-05-16T12:52:41.748Z",
        },
        "languageCode": "es-MX",
        "name": "Mia",
        "naturalSampleRateHertz": null,
        "pitch": 0,
        "speakingRate": 1,
        "synthesizer": "AWS",
        "updatedAt": "2019-05-16T15:01:14.548Z",
      },
      Object {
        "audioProfile": "default",
        "countryCode": "US",
        "createdAt": "2019-04-25T11:35:03.507Z",
        "exampleAudioUrl": null,
        "gender": "FEMALE",
        "id": "59aec332-20dd-4d2e-8dad-e88c770f36d4",
        "isActive": true,
        "isHighestQuality": false,
        "isLanguageDefault": null,
        "isPremium": true,
        "label": "Penélope",
        "language": Object {
          "code": "es",
          "createdAt": "2019-05-16T12:52:41.748Z",
          "id": "ba90fa75-e9fd-419d-a0f7-294ac5181bdd",
          "isActive": true,
          "name": "Spanish",
          "nativeName": "Español",
          "updatedAt": "2019-05-16T12:52:41.748Z",
        },
        "languageCode": "es-US",
        "name": "Penélope",
        "naturalSampleRateHertz": null,
        "pitch": 0,
        "speakingRate": 1,
        "synthesizer": "AWS",
        "updatedAt": "2019-05-16T15:01:14.554Z",
      },
      Object {
        "audioProfile": "default",
        "countryCode": "US",
        "createdAt": "2019-04-25T11:35:03.520Z",
        "exampleAudioUrl": null,
        "gender": "MALE",
        "id": "b3e6c807-733b-465e-a76d-82880cad0993",
        "isActive": true,
        "isHighestQuality": false,
        "isLanguageDefault": null,
        "isPremium": true,
        "label": "Miguel",
        "language": Object {
          "code": "es",
          "createdAt": "2019-05-16T12:52:41.748Z",
          "id": "ba90fa75-e9fd-419d-a0f7-294ac5181bdd",
          "isActive": true,
          "name": "Spanish",
          "nativeName": "Español",
          "updatedAt": "2019-05-16T12:52:41.748Z",
        },
        "languageCode": "es-US",
        "name": "Miguel",
        "naturalSampleRateHertz": null,
        "pitch": 0,
        "speakingRate": 1,
        "synthesizer": "AWS",
        "updatedAt": "2019-05-16T15:01:14.550Z",
      },
      Object {
        "audioProfile": "default",
        "countryCode": "ES",
        "createdAt": "2019-04-25T11:35:03.574Z",
        "exampleAudioUrl": null,
        "gender": "FEMALE",
        "id": "b9bf2c50-205e-48e7-9a7c-e3bc91e2615b",
        "isActive": true,
        "isHighestQuality": false,
        "isLanguageDefault": true,
        "isPremium": false,
        "label": "Conchita",
        "language": Object {
          "code": "es",
          "createdAt": "2019-05-16T12:52:41.748Z",
          "id": "ba90fa75-e9fd-419d-a0f7-294ac5181bdd",
          "isActive": true,
          "name": "Spanish",
          "nativeName": "Español",
          "updatedAt": "2019-05-16T12:52:41.748Z",
        },
        "languageCode": "es-ES",
        "name": "Conchita",
        "naturalSampleRateHertz": null,
        "pitch": 0,
        "speakingRate": 1,
        "synthesizer": "AWS",
        "updatedAt": "2019-06-20T12:38:50.893Z",
      },
      Object {
        "audioProfile": "default",
        "countryCode": "ES",
        "createdAt": "2019-04-25T11:35:03.561Z",
        "exampleAudioUrl": null,
        "gender": "MALE",
        "id": "c2a7a148-a4ed-4c00-990c-2a567fcb0239",
        "isActive": true,
        "isHighestQuality": false,
        "isLanguageDefault": null,
        "isPremium": true,
        "label": "Enrique",
        "language": Object {
          "code": "es",
          "createdAt": "2019-05-16T12:52:41.748Z",
          "id": "ba90fa75-e9fd-419d-a0f7-294ac5181bdd",
          "isActive": true,
          "name": "Spanish",
          "nativeName": "Español",
          "updatedAt": "2019-05-16T12:52:41.748Z",
        },
        "languageCode": "es-ES",
        "name": "Enrique",
        "naturalSampleRateHertz": null,
        "pitch": 0,
        "speakingRate": 1,
        "synthesizer": "AWS",
        "updatedAt": "2019-05-16T15:01:14.597Z",
      },
    ],
  },
]
`;
